--- a/images/chan-4-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-4-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:17:35
 
 [search]
-lastsearch = 2024-07-23 19:59:33
+lastsearch = 2024-07-23 22:13:51
 
 [shopee.vn]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Chăn Lông Tuyết 5kg Giá Tốt T07/2024
 url = https://www.lazada.vn/tag/chan-long-tuyet-5kg/
 
 [tiki.vn]
-match = 11.1%%
-title = Chăn nhung tuyết hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chăn nhung tuyết
+match = -18.5%%
+title = Chăn nhung tuyết dày 5kg hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chăn nhung tuyết dày 5kg
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -47,9 +47,9 @@ title = Chăn Lông Cừu Tuyết YUKI Siêu Ấm Nặng 4kg Chính ...
 url = https://thitruongsi.com/chan-long-cuu-tuyet-yuki-sieu-am-nang-4kg-chinh-hang-men-yuki-day-min-kich-thuoc-2mx2m3-hang-xuat-nhat-gia-ib-a-2129967.html
 
 [www.youtube.com]
-match = -66.7%%
-title = chăn tuyết thái lan giá rẻ - Chăn lông tuyết - Shop Sắc Mai ...
-url = https://www.youtube.com/watch?v=XHN7YU5NYi4
+match = -29.6%%
+title = CHÂN GÀ RÚT XƯƠNG SỐT THÁI mềm giòn đậm vị, ăn là ...
+url = https://www.youtube.com/watch?v=vZ2hBBqGbU4
 
 [www.diepxuan.com]
 match = 22.2%%
