--- a/images/chieu-lac-d2-09/config.ini
+++ b/images/chieu-lac-d2-09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-09.html
 lastopen = 2024-06-21 06:29:43
 
 [search]
-lastsearch = 2024-07-23 21:44:42
+lastsearch = 2024-07-23 22:14:25
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -455,4 +455,9 @@ url = https://bidv.com.vn/wps/wcm/connect/c134ee41-9574-458f-b39a-6b5fb9d23f2e/L
 match = -173.3%%
 title = Chiếu cói trắng thắng - 0,9m x 2m - Chiếu Hiệp Thành
 url = http://www.chieulongdinh.com.vn/vi/san-pham/41/chieu-coi-trang-thang-09m-x-2m.html
+
+[books.google.com]
+match = -273.3%%
+title = Guide du Routard Vietnam 2024/25 - Page 103 - Google Books Result
+url = https://books.google.com/books?id=ZTnhEAAAQBAJ&pg=PA103&lpg=PA103&dq=chieu+lac+d2+09&source=bl&ots=nV0IW-qE_F&sig=ACfU3U1w3u_hwW_Gh8yCrV8DXxANh7fglA&hl=en&sa=X&ved=2ahUKEwjl0_nvub2HAxU8DjQIHSZcAC0Q6AF6BAgjEAM
 
