--- a/images/bo-chan-ga-goi-uc-solid-18/config.ini
+++ b/images/bo-chan-ga-goi-uc-solid-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-solid-18.html
 lastopen = 2024-06-07 01:32:39
 
 [search]
-lastsearch = 2024-07-23 20:36:12
+lastsearch = 2024-07-23 22:21:30
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối cao cấp mã UC22-018
 url = https://changagoidemsonghong.com/chan-ga-goi-uc018
 
 [dongahome.vn]
-match = 14.3%%
-title = Bộ Chăn Ga Gối
-url = https://dongahome.vn/bo-chan-ga-goi
+match = 11.5%%
+title = Bộ chăn ga gối sông hồng urban SH_UC23 031
+url = https://dongahome.vn/chan-ga-goi-song-hong-urban-sh_uc23-031
 
 [demhong.vn]
 match = -42.3%%
@@ -28,8 +28,8 @@ url = https://demhong.vn/chan-ga-goi-song-hong-don-sac-khong-chan/
 
 [chandem.com.vn]
 match = 34.6%%
-title = Bộ chăn ga gối Hidden Beauty Ctt91
-url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-gem-ctt91/
+title = Bộ chăn ga gối cao cấp Chang My P144
+url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-p144/
 
 [www.koala.vn]
 match = -3.8%%
@@ -37,9 +37,9 @@ title = Bộ Chăn Ga Gối Solid SA 18 (120*190 cm) - Koala
 url = https://www.koala.vn/bo-chan-ga-goi-solid-sa-18.html
 
 [shopee.vn]
-match = -42.3%%
-title = Bộ chăn ga gối 5 món chăn phao trần bông dày siêu nhẹ ...
-url = https://shopee.vn/Bộ-chăn-ga-gối-5-món-chăn-phao-trần-bông-dày-siêu-nhẹ-cao-cấp-không-cần-lồng-vỏ-tiện-lợi-i.256686586.9136448059
+match = -11.5%%
+title = Bộ Chăn Ga Gối Cotton Poly 4 món - Happy Bedding
+url = https://shopee.vn/Bộ-Chăn-Ga-Gối-Cotton-Poly-4-món-Bộ-chăn-ga-bộ-ga-giường-drap-nệm-mền-Happy-Bedding-(Miễn-phí-bo-chun)-i.483546614.10240511269
 
 [bedding.vn]
 match = -42.3%%
