--- a/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-200x220-tr.html
 lastopen = 2024-06-07 00:24:25
 
 [search]
-lastsearch = 2024-07-23 21:30:38
+lastsearch = 2024-07-23 22:16:46
 
 [everon.online]
 match = 50.0%%
@@ -14,7 +14,7 @@ url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-
 [everonvn.com.vn]
 match = -17.6%%
 title = Bộ chăn ga chun, gối Everon SR-03 chất liệu 100%% cotton ...
-url = https://everonvn.com.vn/everon/2241/bo-chan-ga-chun-everon-sr-03
+url = https://everonvn.com.vn/everon/2241/bo-chan-ga-chun-everon-sr-03?srsltid=AfmBOorFV351wH0ZduEp8_r3X_KV6Y7Eu1im5Np2mpjoID56a_YyYDqv
 
 [tiki.vn]
 match = 29.4%%
@@ -84,7 +84,7 @@ url = https://www.everonvn.vn/chi-tiet/everon-est22032.html
 [demxanh.com]
 match = -2.9%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 20
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-20.html
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-20.html?srsltid=AfmBOooXsKubwOv7PwySc5Atzkqx55DBXTvvMDwdvbzkDJQPij_m8Nq1
 
 [antbedding.com]
 match = 26.5%%
