--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-23 20:31:21
+lastsearch = 2024-07-23 22:19:06
 
 [en.wikipedia.org]
-match = 0.0%%
-title = 
-url = https://en.wikipedia.org/wiki/Chan_Mali_Chan
+match = -45.5%%
+title = Tetsu Inada
+url = https://en.wikipedia.org/wiki/Tetsu_Inada
 
 [kpop.fandom.com]
 match = -47.1%%
@@ -27,14 +27,14 @@ title = QSC K12.2 premium powered, 12-inch, two-way loudspeaker
 url = https://www.qsc.com/solutions-products/loudspeakers/portable/powered/portable-pa/k2-series/k122/
 
 [www.ncbi.nlm.nih.gov]
-match = -176.5%%
-title = Mechanosensitive Channel PIEZO1 Senses Shear Force to ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9317998/
+match = -158.8%%
+title = The 5th edition of the World Health Organization ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9214472/
 
 [books.google.com]
 match = -11.8%%
 title = Cumulated Index Medicus
-url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWVKK_o4c&sig=ACfU3U3cEhwppTxO0F6B55zqM9tCeYKdNA&hl=en&sa=X&ved=2ahUKEwjJ25L-h72HAxUE5ckDHbKwCaUQ6AF6BAg-EAM
+url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWVKL1v1g&sig=ACfU3U0StEPZq9BH4leuDMzith0cyLr-HA&hl=en&sa=X&ved=2ahUKEwiF8pf2ur2HAxWuweYEHQUGBxIQ6AF6BAgcEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
@@ -47,9 +47,9 @@ title = Qisliq badimcani birde bu cur hazirlayin❗ SUPER RESSEPT ...
 url = https://www.youtube.com/watch?v=kIjdg0j4tA4
 
 [www.tiktok.com]
-match = 0.0%%
-title = This song 😫💔#chan🎵🎶🎧 | this song
-url = https://www.tiktok.com/@channnmusicc/video/7204044061546794267
+match = 5.9%%
+title = Bqcd1oc6cbgsup ...
+url = https://www.tiktok.com/discover/bqcd1oc6cbgsup-4n3fxwtvns7xaijkhwfxb3rdhxcaakeq79jyur6qdg=
 
 [www.psl.noaa.gov]
 match = -194.1%%
