--- a/images/chieu-cay-cao-bang-a-14/config.ini
+++ b/images/chieu-cay-cao-bang-a-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-14.html
 lastopen = 2024-06-09 23:41:44
 
 [search]
-lastsearch = 2024-07-23 15:41:00
+lastsearch = 2024-07-23 22:20:06
 
 [demxanh.com]
 match = -60.9%%
@@ -12,9 +12,9 @@ title = Cách phân biệt các loại chiếu trúc thanh Cao Bằng Cao Sơn
 url = https://demxanh.com/cach-phan-biet-cac-loai-chieu-truc-thanh-cao-bang-cao-son.html
 
 [www.lazada.vn]
-match = -69.6%%
-title = Chiếu trúc Cao Bằng chiếu trúc tăm Tây Bắc chất lượng ...
-url = https://www.lazada.vn/products/chieu-truc-cao-bang-chieu-truc-tam-tay-bac-chat-luong-cao-1m5-1m6-1m8-i656876366.html
+match = 47.8%%
+title = Chiếu Trúc cao bằng 1.4 X 1.95
+url = https://www.lazada.vn/products/chieu-truc-cao-bang-14-x-195-i2173944158.html
 
 [shopee.vn]
 match = 43.5%%
@@ -28,8 +28,8 @@ url = https://lombom.com/chieu-truc-cao-bang-cao-son/
 
 [www.diepxuan.com]
 match = 21.7%%
-title = Chiếu cây Cao Bằng A 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-180x200.html
+title = Chiếu cây Cao Bằng A 150x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-150x190.html
 
 [chieutrucsaigon.com]
 match = -17.4%%
