--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-23 20:02:46
+lastsearch = 2024-07-23 22:22:49
 
 [demxanh.com]
 match = -42.9%%
@@ -12,9 +12,9 @@ title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 11
 url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-11.html
 
 [www.diepxuan.com]
-match = -10.7%%
-title = Bộ ga chun THHome Tencel Micro 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-ga-chun-thhome-tencel-micro-180x200.html
+match = 28.6%%
+title = Điệp Xuân Ga chun EPCARLESS 180x200
+url = https://www.diepxuan.com/ga-chun-epcarless-180x200.html
 
 [mgaleg.maryland.gov]
 match = -75.0%%
@@ -112,9 +112,9 @@ title = Batavus greenparks kettingkast [V7seXc]
 url = http://www.responsinator.com/?aaa&ccode=0001&classname=产品展示&mnid=51918&url=https://xn--80abg0cjq.xn--p1ai/5368124sdzhrozytomskrufe5fe43y
 
 [archive.org]
-match = 7.1%%
-title = Video help, tips, and techniques
-url = https://archive.org/help/video.php?identifier=1944-arsenic-and-old-lace-este-mundo-e-um-hospicio-frank-capra-legendado&ht=480&wd=640&url=https://xn-----6kcbaefdcuda3ajhb7addn3airdibd2ak4bf8a59a.xn--p1ai/ABCr79tfe8fe43z
+match = -7.1%%
+title = Schumann frequenz live stream [tKao2f]
+url = https://archive.org/help/video.php?identifier=1944-arsenic-and-old-lace-este-mundo-e-um-hospicio-frank-capra-legendado&ht=480&wd=640&url=https://xn--80afptqn.xn--p1ai/8723491wwwhuoyanbaocomze5fe43y
 
 [www.semex.com]
 match = -32.1%%
@@ -152,9 +152,9 @@ title = Here Is Staley Farms Golf Community In Beautiful North Kansas ...
 url = http://www.staleyfarmshomeskc.com/docs/news-frame.asp?title=Here Is Staley Farms Golf Community In Beautiful North Kansas ...&page=https://xn----ctbbfhtdwrbb1ale.xn--p1ai/9618573etpm-internationalcomafe88y
 
 [www.lebguide.com]
-match = -25.0%%
-title = Nachthelle movie watch online - LebGuide.com
-url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn--b1ac5aidf.xn--p1ai/42316975nhntqxre7dc9v1cfdv4fe36a
+match = -17.9%%
+title = David lagercrantz kontakt - LebGuide.com
+url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn--360-jed8f.xn--p1ai/37586219pornomichellesellsvictoriacomv4fe36a
 
 [news.google.it]
 match = -3.6%%
@@ -235,4 +235,9 @@ url = https://www.amazon.com/product-reviews/B006H7QX7O
 match = -17.9%%
 title = Art Guide Australia — March/April 2024
 url = https://issuu.com/artguideaustralia/docs/artguideaustralia_marchapril2024-2
+
+[www.e-yearbook.com]
+match = -28.6%%
+title = United States Naval Academy - Lucky Bag ...
+url = http://www.e-yearbook.com/yearbooks/United_States_Naval_Academy_Lucky_Bag_Yearbook/1909/Page_1.html
 
