--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-07-23 19:26:16
+lastsearch = 2024-07-23 22:18:35
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -422,9 +422,9 @@ title = Investor relations - PCH (EN) - ProCredit Holding
 url = https://www.procredit-holding.com/investor-relations/
 
 [en.yna.co.kr]
-match = -117.4%%
-title = (2nd LD) PM: THAAD deployment 'difficult yet inevitable ...
-url = https://en.yna.co.kr/view/AEN20170907001852315
+match = -82.6%%
+title = 122 ships affected by suspected N. Korean GPS jamming
+url = https://en.yna.co.kr/view/AEN20120504005000315
 
 [www.usmcu.edu]
 match = -104.3%%
@@ -605,4 +605,9 @@ url = https://www.kdevelopedia.org/asset/99202003310152552/1585627770191.pdf
 match = -633.3%%
 title = PDF
 url = https://www.govinfo.gov/content/pkg/GPO-WARRENCOMMISSIONHEARINGS-19/pdf/GPO-WARRENCOMMISSIONHEARINGS-19.pdf
+
+[www.marinecorpstimes.com]
+match = -108.7%%
+title = 1983 Beirut barracks bombing: 'The BLT Building is gone!'
+url = https://www.marinecorpstimes.com/news/your-marine-corps/2019/10/23/1983-beirut-barracks-bombing-the-blt-building-is-gone/
 
