--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-23 21:47:12
+lastsearch = 2024-07-23 22:19:43
 
 [en.wikipedia.org]
-match = 10.0%%
-title = Anti-Korean sentiment
-url = https://en.wikipedia.org/wiki/Anti-Korean_sentiment
+match = 15.0%%
+title = Timeline of Korean history
+url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
 
 [peacehistory-usfp.org]
 match = -45.0%%
@@ -37,14 +37,14 @@ title = Korea vs. Kína döntője lesz az MSI-nek!
 url = https://esport1.hu/news/2018/05/20/esport-aioween-leagueoflegends-riot-games-msi-mid-season-invitational-donto-kingzone-vs-rng
 
 [cryptoslate.com]
-match = 5.0%%
-title = Cryptocurrency Rankings
-url = https://cryptoslate.com/coins/
+match = -6.7%%
+title = Ethereum Tokens
+url = https://cryptoslate.com/blockchain/ethereum/
 
 [30rates.com]
-match = -135.0%%
-title = Gold Price Prediction For Tomorrow, This Week And Month.
-url = https://30rates.com/gold-price-forecast-and-predictions
+match = -120.0%%
+title = USD to MXN forecast for tomorrow, this week and month.
+url = https://30rates.com/usd-to-mxn-today-forecast-dollar-to-mexican-peso
 
 [www.akc.org]
 match = -45.0%%
@@ -414,7 +414,7 @@ url = https://8tharmy.korea.army.mil/site/index.asp
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=71f5e84b289439a3&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwifr57-3byHAxW_HkQIHSDMDzcQsZYEegQIKRAC
+url = https://www.google.com/search?sca_esv=6dff3b47ea39d1e5&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwj58taHu72HAxUjADQIHXEuA3EQsZYEegQIThAC
 
 [www.outlookindia.com]
 match = -170.0%%
