--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-07-23 17:36:33
+lastsearch = 2024-07-23 22:15:05
 
 [www.lazada.vn]
 match = -27.8%%
@@ -47,9 +47,9 @@ title = {search_title}
 url = {search_url}
 
 [ninhouse.vn]
-match = 44.4%%
-title = Vỏ gối nằm Classic
-url = https://ninhouse.vn/collections/vo-goi-nam-classic
+match = 43.8%%
+title = Vỏ gối khách sạn
+url = https://ninhouse.vn/products/vo-goi-khach-san
 
 [tonybed.vn]
 match = -100.0%%
@@ -167,9 +167,9 @@ title = Perspective on photonic memristive neuromorphic computing
 url = https://photonix.cn/cn/article/doi/10.1186/s43074-020-0001-6
 
 [sagatexvietnam.online]
-match = -138.9%%
-title = Vỏ Gối Khách Sạn 5 Sao, Vải 100%% Cotton Cao Cấp, Mềm Mại
-url = https://sagatexvietnam.online/product/vo-goi-mau-trang-vai-t400-100-cotton-sagatex-50cmx70cm/
+match = -122.2%%
+title = Vỏ Gối Khách Sạn 6 Sao, 100%% Cotton, Vải Dày, Mềm Mại
+url = https://sagatexvietnam.online/product/bao-goi-cao-cap-mau-trang-vai-t500-100-cotton-sagatex-viet-nam/
 
 [www.thecooperativelogisticsnetwork.com]
 match = -38.9%%
@@ -202,9 +202,9 @@ title = Talis S Single lever basin mixer 100 with pop-up waste set
 url = https://www.hansgrohe.com/articledetail-talis-s-single-lever-basin-mixer-100-with-pop-up-waste-set-72020000
 
 [pro.hansgrohe.com]
-match = -155.6%%
-title = Talis E Shower mixers: 1 function, Chrome, Item No. ...
-url = https://pro.hansgrohe.com/articledetail-talis-e-single-lever-shower-mixer-for-concealed-installation-for-ibox-universal-71765000
+match = -200.0%%
+title = Crometta S, Shower system 240 1jet with single lever mixer ...
+url = https://pro.hansgrohe.com/articledetail-crometta-s-shower-system-240-1jet-with-single-lever-mixer-27958000
 
 [www.sciencedirect.com]
 match = -150.0%%
