--- a/images/chan-4-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-4-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:17:35
 
 [search]
-lastsearch = 2024-07-23 22:13:51
+lastsearch = 2024-07-23 22:29:21
 
 [shopee.vn]
 match = 0.0%%
@@ -17,14 +17,14 @@ title = Chăn Lông Tuyết 5kg Giá Tốt T07/2024
 url = https://www.lazada.vn/tag/chan-long-tuyet-5kg/
 
 [tiki.vn]
-match = -18.5%%
-title = Chăn nhung tuyết dày 5kg hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chăn nhung tuyết dày 5kg
+match = 11.1%%
+title = Chăn nhung tuyết hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chăn nhung tuyết
 
 [h5.lazada.vn]
 match = -11.1%%
-title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung, ...
-url = https://h5.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-tuyet-sin-thai-lan-cho-mua-dong-am-ap-loai-3kg4kg5kg-i2100867387.html
+title = Chăn Lông Tuyết Thái Sịn, Chăn Mền Mùa Đông Khổ ...
+url = https://h5.lazada.vn/products/chan-long-tuyet-thai-sin-chan-men-mua-dong-kho-rong-loai-2kg-3kg-4kg-5kg-size-17mx2m-2mx2m3-i2564626690-s12540487699.html
 
 [tienphong.vn]
 match = 3.7%%
@@ -242,9 +242,9 @@ title = Cháy trung tâm thương mại ở Trung Quốc khiến 16 người ...
 url = https://congan.com.vn/quoc-te/thoi-su-quoc-te/chay-trung-tam-thuong-mai-o-trung-quoc-khien-16-nguoi-thiet-mang_164861.html
 
 [chiaki.vn]
-match = -25.9%%
-title = Chăn lông tuyết Dot To Dot cho bé của Hàn, Trắng trơn
-url = https://chiaki.vn/chan-long-tuyet-dot-to-dot-cho-be-cua-han
+match = 0.0%%
+title = Chăn lông tuyết kẻ tăm Muji xuất Nhật mềm mịn
+url = https://chiaki.vn/chan-tuyet-ke-tam-thu-dong-muji-mem-min-xuat-nhat
 
 [linhkienkhanhnhan.vn]
 match = 40.7%%
