--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-07-23 21:31:30
+lastsearch = 2024-07-23 22:32:11
 
 [zhangbrickshop.com]
 match = -133.3
@@ -147,9 +147,9 @@ title = That's a LOTA Bow! LUNULATA-4B Combat Bow | Destiny 2 ...
 url = https://www.youtube.com/watch?v=Rw4Y3vyFJis
 
 [www.slideshare.net]
-match = -66.7%%
-title = Tóm tắt công thức vật lí 10 | PDF
-url = https://www.slideshare.net/slideshow/tm-tt-cng-thc-vt-l-10/13887451
+match = -13.3%%
+title = Công thức vật lý 10 | PDF
+url = https://www.slideshare.net/slideshow/cng-thc-vt-l-10/76038811
 
 [www.manulife.com.vn]
 match = -153.3%%
