--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-23 20:35:30
+lastsearch = 2024-07-23 22:33:29
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -27,9 +27,9 @@ title = Chiếu Lác: Nơi bán giá rẻ, uy tín, chất lượng nhất
 url = https://websosanh.vn/s/chiếu+lác.htm
 
 [www.youtube.com]
-match = -75.0%%
-title = 22/7 Rank 5 Việt Cùng Elly Lạc Lạc NĐV
-url = https://www.youtube.com/watch?v=9Dcc6K8shxU
+match = -200.0%%
+title = Vietnamese Baguette Recipe - BÁNH MÌ VIỆT NAM - KNEAD ...
+url = https://www.youtube.com/watch?v=yzQ6rCK8pJw
 
 [tuyensinh247.com]
 match = -225.0%%
