--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-23 19:26:36
+lastsearch = 2024-07-23 22:31:35
 
 [scholar.google.com]
 match = -43.8%%
@@ -117,9 +117,9 @@ title = Chiều 18/7 Thủy hà mã báo tin vui con gái ông 5
 url = https://www.youtube.com/watch?v=0KNcjFtCq5c
 
 [books.google.com]
-match = -218.8%%
-title = Gazetteer to AMS 1:250,000 Maps of Indochina (series L509).
-url = https://books.google.com/books?id=3gZclKX0dQYC&pg=PA272&lpg=PA272&dq=chieu+lac+soc+18&source=bl&ots=LZu6XSfCZm&sig=ACfU3U3rvTDf2yf0F_jBHWmuPPbH6D4bsg&hl=en&sa=X&ved=2ahUKEwistuqulL2HAxXFF2IAHQdWCIMQ6AF6BAglEAM
+match = -231.2%%
+title = Tạp chí cộng sản: cơ quan lý luận và chính trị của Đảng cộng ...
+url = https://books.google.com/books?id=LajaAAAAMAAJ&pg=RA2-PA67&lpg=RA2-PA67&dq=chieu+lac+soc+18&source=bl&ots=OZI6V67853&sig=ACfU3U04b3l_kz5D6G4bXWLSWdguPqen1g&hl=en&sa=X&ved=2ahUKEwj-rZzbvb2HAxXtv4kEHf5-CtoQ6AF6BAgZEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
@@ -222,9 +222,9 @@ title = Chuyển phát nhanh Phương Trang ...
 url = https://futaexpress.vn/chi-nhanh
 
 [baolongan.vn]
-match = -31.2%%
-title = Giữ nghề dệt chiếu Long Cang
-url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
+match = -125.0%%
+title = Một ngày ở làng dệt chiếu lác Long Cang, Cần Đước
+url = https://baolongan.vn/mot-ngay-o-lang-det-chieu-lac-long-cang-can-duoc-a5230.html
 
 [baothuathienhue.vn]
 match = -200.0%%
@@ -372,9 +372,9 @@ title = Size Guide
 url = https://pandora.norbreeze.vn/pages/size-guide-1
 
 [m.facebook.com]
-match = -168.8%%
-title = CẦN XE KÉO CONT 01X20'DC từ CÁT LÁI GIANG NAM - ...
-url = https://m.facebook.com/groups/logisticsvietnam/posts/8429178217116624/
+match = -106.2%%
+title = HR - TUYỂN DỤNG | 𝓣𝓻𝓪̀ 𝓢𝓾̛̃𝓪 𝑵𝑶̣𝑵𝑮 𝓒𝓪̂̀𝓷 𝓑𝓸̂̉ ...
+url = https://m.facebook.com/groups/hrtuyendungcnns/posts/8343526272338013/
 
 [shopee.vn]
 match = 25.0%%
