CI images update

--- a/images/tham-giuong-bo-de-15/config.ini
+++ b/images/tham-giuong-bo-de-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-15.html
 lastopen = 2024-06-07 00:36:08
 
 [search]
-lastsearch = 2024-07-23 16:21:48
+lastsearch = 2024-07-23 22:44:36
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -87,9 +87,9 @@ title = Giường xếp gọn, ghế xếp là hai sản phẩm tiện ích củ
 url = https://sumika.vn/ghe-xep-giuong-xep-839
 
 [noithatanhuy.com.vn]
-match = -20.0%%
-title = Bộ giường tủ giá rẻ mẫu 15 - Vân gỗ
-url = https://noithatanhuy.com.vn/bo-giuong-tu-gia-re-mau-15-van-go
+match = -5.0%%
+title = Bộ giường tủ giá rẻ mẫu 15 - Nâu
+url = https://noithatanhuy.com.vn/bo-giuong-tu-gia-re-mau-15-nau
 
 [flexhouse.vn]
 match = -55.0%%
