--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-07-23 21:31:10
+lastsearch = 2024-07-23 22:49:04
 
 [hk.linkedin.com]
 match = -123.1%%
@@ -190,4 +190,9 @@ url = https://www.cocochan118.com/
 match = -146.2%%
 title = Kwok Hoi Chan - 12 vintage design items
 url = https://www.vntg.com/designer/kwok-hoi-chan/
+
+[theloophk.com]
+match = -146.2%%
+title = Next Up: Coco Chan and Valerie Ho of OMSA
+url = https://theloophk.com/next-up-coco-chan-and-valerie-ho-of-omsa/
 
