--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-23 21:36:26
+lastsearch = 2024-07-23 22:51:42
 
 [hoa18.com]
 match = -84.2%%
@@ -12,9 +12,9 @@ title = Giỏ hoa tươi Mộc Mạc - Giá tốt nhất - Shop Hoa18
 url = https://hoa18.com/san-pham/gio-hoa-tuoi-moc-mac
 
 [www.youtube.com]
-match = -126.3%%
-title = Cây hoa mộc,cây hoa mộc hương ra hoa nhiều,những căn ...
-url = https://www.youtube.com/watch?v=KAnEyj4H3PY
+match = -147.4%%
+title = 3 Yếu tố giúp cây hoa Mộc hương phát triển nhanh cây khoẻ ...
+url = https://www.youtube.com/watch?v=ASsdVo0WBew
 
 [kallos.co]
 match = -105.3%%
@@ -27,9 +27,9 @@ title = Hồi Sinh Ngọc Rồng
 url = https://www.facebook.com/hoisinhngocrong/
 
 [vietnambiz.vn]
-match = -115.8%%
-title = Giá vàng miếng SJC còn cao hơn thế giới 1 triệu đồng
-url = https://vietnambiz.vn/gia-vang-mieng-sjc-con-cao-hon-the-gioi-1-trieu-dong-2024717115122126.htm
+match = -147.4%%
+title = Dự báo giá heo hơi ngày 24/7, thị trường sẽ đảo chiều ...
+url = https://vietnambiz.vn/du-bao-gia-heo-hoi-ngay-247-thi-truong-se-dao-chieu-tang-tai-nhieu-dia-phuong-2024723112253458.htm
 
 [thoibaotaichinhvietnam.vn]
 match = -147.4%%
