--- a/images/chieu-dieu-hoa-khong-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-14.html
 lastopen = 2024-06-09 22:26:37
 
 [search]
-lastsearch = 2024-07-23 21:36:58
+lastsearch = 2024-07-23 22:47:49
 
 [shopee.vn]
-match = 0.0%%
-title = chiếu điều hoà giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu điều hoà
+match = -33.3%%
+title = Chiếu điều hoà Muji lót lụa cao cấp hàng loại 1 ( không ...
+url = https://shopee.vn/Chiếu-điều-hoà-Muji-lót-lụa-cao-cấp-hàng-loại-1-(-không-kèm-vỏ-gối)-i.19058947.8867361209
 
 [demxanh.com]
 match = 14.8%%
