--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-07-23 22:31:04
+lastsearch = 2024-07-23 22:49:39
 
 [www.diepxuan.com]
-match = 14.3%%
-title = Chiếu gấp Đài Loan 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html
+match = 19.0%%
+title = Chiếu gấp Đài Loan 140x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-gap-dai-loan-140x190.html
 
 [www.youtube.com]
-match = -142.9%%
-title = Thế giới toàn cảnh 4/4: Chưa ghi nhận người Việt bị nạn sau ...
-url = https://www.youtube.com/watch?v=FxtLTLGhTYA
+match = -128.6%%
+title = TỐI 14/8: Đài Loan tuyên bố không lùi bước trước đe doạ ...
+url = https://www.youtube.com/watch?v=0xrEqV3twWM
 
 [roc-taiwan.org]
 match = -66.7%%
@@ -22,9 +22,9 @@ title = THỦ TỤC LÀM HỘ CHIẾU ĐÀI LOAN VÀ VISA NHẬP CẢN...
 url = https://roc-taiwan.org/vnsgn_en/post/79.html
 
 [shopee.vn]
-match = -42.9%%
-title = BẢN LỀ GẬP THÔNG MINH ĐÀI LOAN CHỊU LỰC 80KG
-url = https://shopee.vn/BẢN-LỀ-GẬP-THÔNG-MINH-ĐÀI-LOAN-CHỊU-LỰC-80KG-LOẠI-CAO-CẤP-INOX-BẢN-DÀY-CHẮC-CHẮN-GIÁ-ĐỠ-GẤP-BÀN-TREO-TƯỜNG-XẾP-GỌN-i.120824980.3158643972
+match = -57.1%%
+title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
+url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
 
 [www.taiwanembassy.org]
 match = -19.0%%
@@ -47,9 +47,9 @@ title = Thông tin lãnh sự - Văn phòng Kinh tế và Văn hóa Đài Bắc 
 url = https://www.roc-taiwan.org/vn_vi/cat/47.html
 
 [www.facebook.com]
-match = -138.1%%
-title = Bản tin tiếng Việt PTS 公視越南語新聞 | Taipei
-url = https://www.facebook.com/ptsvietnamesenews/?locale=vi_VN
+match = 28.6%%
+title = Xin chào, tôi ở Đài Loan
+url = https://www.facebook.com/toiodailoan/?locale=vi_VN
 
 [www.tripadvisor.com.vn]
 match = -42.9%%
@@ -190,4 +190,9 @@ url = https://vietluxtour.com/du-lich-nuoc-ngoai/dai-loan-dai-bac-nam-dau-dai-tr
 match = -109.5%%
 title = Hoa Kỳ, Trung Quốc và Đài Loan và vai trò của răn đe ...
 url = https://vietbao.com/a319583/hoa-ky-trung-quoc-va-dai-loan-va-vai-tro-cua-ran-de-trong-cac-kich-ban-khong-gay-chien
+
+[www.skyscanner.com.vn]
+match = -81.0%%
+title = Vé máy bay giá rẻ từ Hoa Kỳ đến Đài Loan - Skyscanner
+url = https://www.skyscanner.com.vn/routes/us/tw/hoa-ky-to-đai-loan.html
 
