--- a/images/giuong-mn-1/config.ini
+++ b/images/giuong-mn-1/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/giuong-mn-1.html
 lastopen = 2024-06-07 00:35:37
 
 [search]
-lastsearch = 2024-07-23 15:35:08
+lastsearch = 2024-07-23 22:47:26
 
 [phana.com.vn]
-match = 63.6%%
-title = Giường bệnh
-url = https://phana.com.vn/giuong-benh
+match = -90.9%%
+title = MN-G1-Giường 1 tay quay có bô
+url = https://phana.com.vn/mn-g1-giuong-1-tay-quay-co-bo
 
 [tiki.vn]
 match = -190.9%%
@@ -17,9 +17,9 @@ title = Giường 1,8mx2m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=giường 1,8mx2m
 
 [www.facebook.com]
-match = -272.7%%
-title = Giường & khung giường màu xám gần Kasson, Minnesota
-url = https://www.facebook.com/marketplace/112065005476018/gray-bed-frames/?locale=vi_VN
+match = -309.1%%
+title = Có bán Tủ đầu giường bằng gỗ tại Minneapolis, Minnesota
+url = https://www.facebook.com/marketplace/minneapolis/wood-nightstands/?locale=vi_VN
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -107,14 +107,14 @@ title = Giường MN 5
 url = http://thietbimamnontienloc.com/san-pham/giuong-mn-5-253.html
 
 [www.airbnb.com.vn]
-match = -309.1%%
-title = Phòng 1 Giường cỡ King 2 Phòng tại Bloomington - Airbnb
-url = https://www.airbnb.com.vn/rooms/929459059736966278
+match = -400.0%%
+title = Phòng tiêu chuẩn 1 giường đôi tại Millennium Minneapolis - Airbnb
+url = https://www.airbnb.com.vn/hotels/1059440610457947224
 
 [freemeteo.cl]
 match = -281.8%%
 title = Weather Xom Giuong (1) - Long term weather forecast
-url = https://freemeteo.cl/mobile/weather/xom-giuong-1/longterm/monthly/?gid=1561485&mn=7&language=english&country=vietnam
+url = https://freemeteo.cl/mobile/weather/xom-giuong-1/longterm/monthly/?gid=1561485&mn=10&language=english&country=vietnam
 
 [www.booking.com]
 match = -372.7%%
@@ -155,4 +155,9 @@ url = https://m.vi.aliexpress.com/wholesale/nệm-giường-y-tế.html?browser_
 match = -45.5%%
 title = Category: Bo Giuong
 url = https://www.wikitree.com/wiki/Category:Bo_Giuong
+
+[vn.trip.com]
+match = -281.8%%
+title = Country Inn & Suites by Radisson, Stillwater, MN
+url = https://vn.trip.com/hotels/stillwater-1-hotel-detail-2885985/comfort-inn-and-suites-stillwater/
 
