--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-07-23 22:30:13
+lastsearch = 2024-07-23 22:47:05
 
 [www.amazon.com]
 match = -309.1%%
@@ -27,9 +27,9 @@ title = Cung Cấp Bàn Ghế Đá Granito Miền Bắc Rẻ Nhất Thị ...
 url = https://ghedamienbac.com/ban-ghe-da-granito/
 
 [noithathoaphat.com]
-match = -309.1%%
-title = Ghế xoay da trưởng phòng - SG903 - Nội Thất Hòa Phát
-url = https://noithathoaphat.com/ghe-da-truong-phong-sg903
+match = -290.9%%
+title = Ghế da lãnh đạo SG936 | Ghế xoay văn phòng Hòa Phát
+url = https://noithathoaphat.com/ghe-da-lanh-dao-sg936
 
 [dandoxe.com]
 match = -154.5%%
