--- a/images/tui-singapore14/config.ini
+++ b/images/tui-singapore14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore14.html
 lastopen = 2024-06-17 10:45:32
 
 [search]
-lastsearch = 2024-07-23 17:37:38
+lastsearch = 2024-07-23 22:44:47
 
 [www.tui.co.uk]
-match = -40.0%%
-title = Flight and Travel Options
-url = https://www.tui.co.uk/destinations/info/travel-options
+match = -153.3%%
+title = Where We Fly | Flights with TUI 2024 / ...
+url = https://www.tui.co.uk/flight/where-we-fly
 
 [cruisepanda.com]
 match = -213.3%%
@@ -150,4 +150,9 @@ url = https://www.thenaturaladventure.com/tours/spain/camino-portugues-last-100k
 match = 0.0%%
 title = 
 url = https://www.cruisecritic.co.uk/cruise/marella/marella-voyager
+
+[en.wikipedia.org]
+match = 0.0%%
+title = 
+url = https://en.wikipedia.org/wiki/Marella_Cruises
 
