--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-23 23:23:47
+lastsearch = 2024-07-24 00:17:29
 
 [shopee.vn]
 match = -28.0%%
@@ -87,9 +87,9 @@ title = Sự kiện Dịch vụ Lãnh Sự sắp tới tại Đà Nẵng
 url = https://vn.usembassy.gov/vi/upcoming-consular-services-event-in-da-nang-24-june-2024/
 
 [m.facebook.com]
-match = -88.0%%
-title = Ngồi coi video về chống lừa đảo... - Xin chào, tôi ở Đài Loan
-url = https://m.facebook.com/toiodailoan/posts/5438087432905953/?locale=hi_IN
+match = -92.0%%
+title = Gap go buoi toi tam ti may c oi | By Kem sach olee NGOC ...
+url = https://m.facebook.com/Kem-sach-olee-NGOC-HA-100204011784578/videos/gap-go-buoi-toi-tam-ti-may-c-oi/1408185629686574/
 
 [www.youtube.com]
 match = -92.0%%
@@ -212,14 +212,14 @@ title = Kết quả sản xuất vụ đông xuân năm 2024
 url = https://www.gso.gov.vn/du-lieu-va-so-lieu-thong-ke/2024/07/ket-qua-san-xuat-vu-dong-xuan-nam-2024/
 
 [znews.vn]
-match = -64.0%%
-title = Trò gắp thú bùng nổ ở Đài Loan giữa lúc kinh tế suy thoái
-url = https://znews.vn/tro-gap-thu-bung-no-o-dai-loan-giua-luc-kinh-te-suy-thoai-post900642.html
+match = -32.0%%
+title = 'Người đẹp' với chiêu lừa cầm cố 15 chiếc ôtô
+url = https://znews.vn/nguoi-dep-voi-chieu-lua-cam-co-chiec-oto-post711644.html
 
 [vnexpress.net]
-match = 4.0%%
-title = articles-2005-sitemap.xml
-url = https://vnexpress.net/articles-2005-sitemap.xml?m=1&d=15
+match = -37.5%%
+title = tags-sitemap.xml
+url = https://vnexpress.net/tags-sitemap.xml?p=3214
 
 [thoibaotaichinhvietnam.vn]
 match = -96.0%%
