--- a/images/chieu-lac-soc-10/config.ini
+++ b/images/chieu-lac-soc-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-10.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-23 21:34:36
+lastsearch = 2024-07-24 00:16:58
 
 [www.chieulongdinh.com.vn]
 match = -93.8%%
@@ -92,9 +92,9 @@ title = Nóp cỏ bàng và chiếu lác - Tạp chí Văn Hóa & Phát Triển
 url = https://baomoi.com/nop-co-bang-va-chieu-lac-c40335029.epi
 
 [books.google.com]
-match = -100.0%%
-title = Bộ đề thi Ngữ văn Ôn vào 10 năm 2023-2024
-url = https://books.google.com/books?id=K50DEQAAQBAJ&pg=PA46&lpg=PA46&dq=chieu+lac+soc+10&source=bl&ots=yKoQnlv2nP&sig=ACfU3U3XI6ReKRv-ZupFyr6Ohe2-4Mzn7Q&hl=en&sa=X&ved=2ahUKEwjZkq_o5LyHAxVLkYkEHbMgAKQQ6AF6BAgiEAM
+match = -212.5%%
+title = Gazetteer to AMS 1:250,000 Maps of Indochina (series L509).
+url = https://books.google.com/books?id=3gZclKX0dQYC&pg=PA272&lpg=PA272&dq=chieu+lac+soc+10&source=bl&ots=LZu6XUdxRo&sig=ACfU3U0FIEba8h_ZN-lu17nYqr9sEvMJ3Q&hl=en&sa=X&ved=2ahUKEwjSuqSi1b2HAxUZMlkFHWHKAy4Q6AF6BAgiEAM
 
 [thanglong.chinhphu.vn]
 match = -156.2%%
