--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-07-23 23:53:04
+lastsearch = 2024-07-24 00:20:13
 
 [www.youtube.com]
-match = -390.0%%
-title = Renren Is Love, Renren Is Life | 14 Days With You (Day 1)
-url = https://www.youtube.com/watch?v=dS5JtXqOR-I
+match = -420.0%%
+title = A Date With Ren? Don't Worry About It | 14 Days With You ...
+url = https://www.youtube.com/watch?v=pjfU1xhfUrg
 
 [www.sinimed.co.il]
 match = -370.0%%
@@ -17,9 +17,9 @@ title = Tung's Acupuncture points 33.13 (Ren shi), 33.14 (Di ...
 url = https://www.sinimed.co.il/en/acupuncture/en-33-13-33-14-33-15/
 
 [www.tumblr.com]
-match = -70.0%%
-title = ren 14 days with you
-url = https://www.tumblr.com/tagged/ren 14 days with you
+match = -350.0%%
+title = When is Ren/[REDACTED] birthday? – @14dayswithyou ...
+url = https://www.tumblr.com/14dayswithyou/693943503681732608/when-is-renredacted-birthday
 
 [www.garagejournal.com]
 match = -200.0%%
@@ -97,9 +97,9 @@ title =
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8733268/
 
 [www.tiktok.com]
-match = 0.0%%
-title = Ren from 14 Days
-url = https://www.tiktok.com/discover/ren-from-14-days
+match = -160.0%%
+title = marissa ren (@marstruck) Official
+url = https://www.tiktok.com/@marstruck?lang=en
 
 [nordicanglers.com]
 match = -120.0%%
@@ -275,4 +275,29 @@ url = https://www.medicalnewstoday.com/articles/324699
 match = 0.0%%
 title = 
 url = https://academic.oup.com/book/24392/chapter/187344854
+
+[dickinsonathletics.com]
+match = -380.0%%
+title = Ren LaMotte - 2024 - Men's Lacrosse - Dickinson College
+url = https://dickinsonathletics.com/sports/mens-lacrosse/roster/ren-lamotte/7858
+
+[aueagles.com]
+match = -440.0%%
+title = Clarissa Ren - 2013-14 - Track and Field - American University
+url = https://aueagles.com/sports/track-and-field/roster/clarissa-ren/586
+
+[dss.sc.gov]
+match = -400.0%%
+title = Calculator - South Carolina Department of Social Services
+url = https://dss.sc.gov/child-support/calculator/
+
+[www.garenfest.com]
+match = -450.0%%
+title = Georgia Renaissance Festival: Celebrating 39 Years of Cheers!
+url = https://www.garenfest.com/
+
+[renfestival.com]
+match = -100.0%%
+title = Ohio Renaissance Festival
+url = https://renfestival.com/
 
