--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-18.html
 lastopen = 2024-06-10 00:49:07
 
 [search]
-lastsearch = 2024-07-23 23:26:03
+lastsearch = 2024-07-24 00:14:06
 
 [demtot.com]
 match = 42.9%%
@@ -48,8 +48,8 @@ url = https://www.diepxuan.com/nem-tuan-anh.html
 
 [sieuthidemonline.vn]
 match = -66.7%%
-title = Nệm lò xo túi Acnes cao cấp - Bảng giá khuyến mại!
-url = https://sieuthidemonline.vn/nem-lo-xo-tui-acnes/
+title = Nệm lò xo giàn Techwood cao cấp - Bảng giá khuyến mại!
+url = https://sieuthidemonline.vn/bang-gia-nem-lo-xo-gian-techwood/
 
 [demsingapore.com]
 match = 19.0%%
@@ -57,9 +57,9 @@ title = Đệm lò xo Hàn Việt Hải giá rẻ
 url = https://demsingapore.com/dem-lo-xo-han-viet-hai.html
 
 [lombom.com]
-match = -119.0%%
-title = Nơi cung cấp nệm đệm lò xo cao cấp chính hãng tại Việt Nam!
-url = https://lombom.com/dem-lo-xo/
+match = -133.3%%
+title = Tổng kho nệm - đệm chính hãng khuyến mại 20-60%% Freeship!
+url = https://lombom.com/dem-nem/page/2/
 
 [www.linkedin.com]
 match = 4.8%%
