--- a/images/nem-sieu-nhe-9f-16/config.ini
+++ b/images/nem-sieu-nhe-9f-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-16.html
 lastopen = 2024-06-10 00:30:12
 
 [search]
-lastsearch = 2024-07-23 21:12:49
+lastsearch = 2024-07-24 00:16:17
 
 [www.instagram.com]
-match = -50.0%%
-title = NEM Furniture JSC (@nemfurniturejsc)
-url = https://www.instagram.com/nemfurniturejsc/?hl=en
+match = -144.4%%
+title = Thùy Ngân (@huuloc861) • Instagram photos and videos
+url = https://www.instagram.com/huuloc861/
 
 [www.lazada.vn]
 match = -61.1%%
@@ -17,9 +17,9 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -105.6%%
-title = Người Việt Omaha Nebraska USA | 💥 NEM CUA BỂ ...
-url = https://www.facebook.com/groups/465201877663126/posts/-nem-cua-bể-vuông-siêu-chất-lượng-nhất-định-mọi-người-nên-thử-món-nem-này-của-nh/1586366828879953/
+match = -155.6%%
+title = Nghi Ngờ Chồng "Ăn Nem" Với Bạn Thân Và Sự Thật Phía Sau
+url = https://www.facebook.com/msmile2022/videos/nghi-ngờ-chồng-ăn-nem-với-bạn-thân-và-sự-thật-phía-sau/1055228991798802/
 
 [thegioinem.com]
 match = -77.8%%
@@ -52,9 +52,9 @@ title = NƯỚC MẮM NAM NGƯ SIÊU TIẾT KIỆM 4.8L
 url = https://lanchi.vn/san-pham/nuoc-mam-nam-ngu-sieu-tiet-kiem-4-8l/
 
 [www.tiktok.com]
-match = -166.7%%
-title = Nem Nướng Cô Lê - 16B ngõ 3 Ao Sen (35~70k) #tiktokfood ...
-url = https://www.tiktok.com/@eatwithmynoreo/video/7132782326672592155?lang=en
+match = -72.2%%
+title = Rissa and Quan Break Up Prank in A Car
+url = https://www.tiktok.com/discover/rissa-and-quan-break-up-prank-in-a-car
 
 [thuvienphapluat.vn]
 match = -133.3%%
