--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-07-23 23:23:07
+lastsearch = 2024-07-24 00:19:32
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -22,9 +22,9 @@ title = notice on public participation & accessibility
 url = https://www.southpasadenaca.gov/files/assets/public/v/1/police/documents/agenda-packet-combined-092.pdf
 
 [en.wikipedia.org]
-match = -58.3%%
-title = Nam Joo-hyuk
-url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
+match = -72.7%%
+title = Kristi Noem
+url = https://en.wikipedia.org/wiki/Kristi_Noem
 
 [www.facebook.com]
 match = -108.7%%
@@ -127,9 +127,9 @@ title = @Jacquemus has just opened their pop up store in Seoul ...
 url = https://www.tiktok.com/@culted/video/7292084447212571937?lang=en
 
 [30rates.com]
-match = -39.1%%
-title = RIOT STOCK PRICE FORECAST TOMORROW, WEEK ...
-url = https://30rates.com/riot-stock
+match = -47.8%%
+title = NEM PRICE PREDICTION TOMORROW, WEEK AND ...
+url = https://30rates.com/nem-price-prediction-tomorrow-week-month-xem-forecast
 
 [www.google.com]
 match = 0.0%%
@@ -422,9 +422,9 @@ title = Investor relations - PCH (EN) - ProCredit Holding
 url = https://www.procredit-holding.com/investor-relations/
 
 [en.yna.co.kr]
-match = -82.6%%
-title = 122 ships affected by suspected N. Korean GPS jamming
-url = https://en.yna.co.kr/view/AEN20120504005000315
+match = -117.4%%
+title = (2nd LD) PM: THAAD deployment 'difficult yet inevitable ...
+url = https://en.yna.co.kr/view/AEN20170907001852315
 
 [www.usmcu.edu]
 match = -104.3%%
@@ -437,9 +437,9 @@ title = atp 5-0.2 staff reference guide staffing draft—not for implem ...
 url = https://usacac.army.mil/sites/default/files/documents/cadd/Collaboration/11-08-19_SRG_CGSC2.pdf
 
 [www.biblegateway.com]
-match = -108.7%%
-title = Marc 14 BDS;KAR;KJV;NIV - Mort et résurrection de Jésus Le
-url = https://www.biblegateway.com/passage/?search=Marc 14&version=BDS;KAR;KJV;NIV
+match = -56.5%%
+title = Atos 19,Acts 19 NVI-PT;NIV - Paulo em Éfeso
+url = https://www.biblegateway.com/passage/?search=Atos 19,Acts 19&version=NVI-PT;NIV
 
 [kids.nationalgeographic.com]
 match = 0.0%%
