--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-07-23 21:46:11
+lastsearch = 2024-07-24 00:12:32
 
 [www.youtube.com]
 match = -40.7%%
@@ -17,9 +17,9 @@ title = Phân Loại Vỏ Gối Theo Chất Liệu - Ưu, Nhược Điểm Từn
 url = https://ru9.vn/blogs/magazine/phan-loai-vo-goi-theo-chat-lieu-uu-nhuoc-diem-tung-loai
 
 [jysk.vn]
-match = -59.3%%
-title = Vỏ Chăn Ga Gối Trơn, Cotton Cao Cấp Bền, Đẹp Giá Rẻ | JYSK
-url = https://jysk.vn/bo-vo-chan-goi-cotton-det-tron
+match = -33.3%%
+title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
+url = https://jysk.vn/vo-goi-trang-tri
 
 [elambo.vn]
 match = -3.7%%
@@ -37,14 +37,14 @@ title = Kinh hoàng ruột gối siêu rẻ đen ngòm
 url = https://eva.vn/mua-sam-gia-ca/kinh-hoang-ruot-goi-sieu-re-den-ngom-c2a127941.html
 
 [shopee.vn]
-match = -22.2%%
-title = vỏ gối hello kitty giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=vỏ gối hello kitty&urlold=vo-goi-om-xoa-nhung-hello-kitty-no/6152316541839545337/343220106741734172/ 
+match = -55.6%%
+title = Chăn ga gối đệm cưới - Giá Tốt, Miễn Phí Vận Chuyển, Đủ ...
+url = https://shopee.vn/list/chăn ga gối/đệm cưới
 
 [demxanh.com]
-match = -74.1%%
-title = [Mẹo vặt] Cách làm phồng ruột gối tại nhà đơn giản, hiệu quả
-url = https://demxanh.com/cach-lam-phong-ruot-goi.html
+match = -44.4%%
+title = Chăn ga gối Olympia chính hãng giá rẻ nhất thị trường
+url = https://demxanh.com/chan-ga-goi-olympia.html
 
 [www.thegioididong.com]
 match = -55.6%%
@@ -187,9 +187,9 @@ title = Bảng giá lẻ vỏ chăn ga gối trắng kẻ sọc cao cấp
 url = https://demhong.vn/chan-ga-goi-trang-ke-soc/
 
 [dienmaycholon.com]
-match = -48.1%%
-title = Cách tìm lại nhật ký cuộc gọi đã xóa trên Android và ...
-url = https://dienmaycholon.com/kinh-nghiem-mua-sam/huong-dan-cach-tim-lai-nhat-ky-cuoc-goi-da-xoa-tren-android-va-iphone
+match = -18.5%%
+title = Gối & Vỏ Gối giá rẻ nhiều ưu đãi, giao hàng nhanh.
+url = https://dienmaycholon.com/goi-vo-goi
 
 [metruyen.me]
 match = 33.3%%
