--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-07-23 21:31:59
+lastsearch = 2024-07-24 00:38:03
 
 [everon.online]
 match = -32.0%%
@@ -152,9 +152,9 @@ title = Mẹ già U70 cõng con trai cao 1,82m suốt 5 năm, cố tập cho ...
 url = https://vietbao.vn/me-gia-u70-cong-con-trai-cao-1-82m-suot-5-nam-co-tap-cho-con-di-bo-491194.html
 
 [m.facebook.com]
-match = 20.0%%
-title = Hội Mua Bán Chung Cư Hà Nội Giá Rẻ
-url = https://m.facebook.com/groups/386614282654291/posts/1025219878793725/
+match = 16.0%%
+title = Mua Bán Chung Cư Cao Cấp Hà Nội
+url = https://m.facebook.com/groups/462923528145184/posts/1119223722515158/
 
 [dantri.com.vn]
 match = -60.0%%
