--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-07-23 23:22:10
+lastsearch = 2024-07-24 00:30:47
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -12,24 +12,24 @@ title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung, ...
 url = https://h5.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-tuyet-sin-thai-lan-cho-mua-dong-am-ap-loai-3kg4kg5kg-i2100867387.html
 
 [shopee.vn]
-match = 7.4%%
-title = CHĂN LÔNG TUYẾT NHUNG CAO CẤP Thái Lan Loại 4kg
-url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg-i.126028938.4857799045
+match = 0.0%%
+title = CHĂN LÔNG TUYẾT SỊN THÁI LAN 3KG HAI LỚP IN HOA ...
+url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-SỊN-THÁI-LAN-3KG-HAI-LỚP-IN-HOA-CAO-CẤP-i.169744499.6052072833
 
 [www.lazada.vn]
-match = 22.2%%
-title = Chăn Lông Tuyết 5kg Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/chan-long-tuyet-5kg/
+match = 3.7%%
+title = Chăn Tuyết Nhung 5kg Giá Tốt T05/2024
+url = https://www.lazada.vn/tag/chan-tuyet-nhung-5kg/
 
 [tiki.vn]
-match = -3.7%%
-title = Chăn tuyết nhung hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chăn tuyết nhung
+match = -33.3%%
+title = Chăn băng lông tuyết nhung Thái siêu ấm xịn xò 3kg 4kg 5kg
+url = https://tiki.vn/chan-bang-long-tuyet-nhung-thai-sieu-am-xin-xo-3kg-4kg-5kg-p217888745.html
 
 [demxanh.com]
-match = -18.5%%
-title = Chăn tuyết Hàn Quốc Soft 2kg màu trắng hình tim
-url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-mau-trang-hinh-tim.html
+match = 33.3%%
+title = Chăn lông tuyết | Chăn lông cao cấp
+url = https://demxanh.com/chan-long-tuyet.html
 
 [ninhouse.vn]
 match = 32.0%%
@@ -245,4 +245,9 @@ url = https://selinahouse.com/goc-tu-van-chan-long-tho/phan-biet-chan-long-tho-t
 match = 3.7%%
 title = GÓC CŨ TÔI VỀ – CHÂN TUYẾT NGHIÊM
 url = https://langmaithailan.org/goc-cu-toi-ve-chan-tuyet-nghiem/la-thu-vuon-uom/la-thu-vuon-uom-6/13342
+
+[researchonline.lshtm.ac.uk]
+match = -48.1%%
+title = Items where Author or Contributor is "Hibberd, ML"
+url = https://researchonline.lshtm.ac.uk/view/creators/ipmbmhib.html
 
