--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-07-23 19:25:19
+lastsearch = 2024-07-24 00:37:51
 
 [www.diepxuan.com]
 match = 42.9%%
@@ -12,9 +12,9 @@ title = Chiếu nhựa Hà Nội 150x190 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-nhua-ha-noi-150x190.html
 
 [shopee.vn]
-match = -25.0%%
-title = Chiếu nhựa gấp gọn size 2m ×3m chiếu ăn cơm hàng đẹp ...
-url = https://shopee.vn/Chiếu-nhựa-gấp-gọn-size-2m-×3m-chiếu-ăn-cơm-hàng-đẹp-nhiều-màu-i.114438421.4732248740
+match = 32.1%%
+title = chiếu nhựa gấp gọn Thái Bình tiện dụng
+url = https://shopee.vn/chiếu-nhựa-gấp-gọn-Thái-Bình-tiện-dụng-i.114438421.3932155248
 
 [tiki.vn]
 match = -21.4%%
@@ -22,9 +22,9 @@ title = Chiếu nhựa việt nam 2mx4m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu nhựa việt nam 2mx4m
 
 [www.yellowpages.vn]
-match = 0.0%%
-title = danh sách Chiếu Nhựa
-url = https://www.yellowpages.vn/tgcls/10490435/Chiếu-Nhựa.html?j=0
+match = -5.3%%
+title = sản xuất chiếu nhựa
+url = https://www.yellowpages.vn/tgcls/40490435/sản-xuất-chiếu-nhựa.html?j=3
 
 [www.dienmayxanh.com]
 match = -35.7%%
@@ -37,9 +37,9 @@ title = LỊCH HỘI CHỢ VÀ TRIỂN LÃM THƯƠNG MẠI TẠI HÀ NỘI ...
 url = https://tradepro.vn/vi/hoi-cho-trien-lam/ha-noi
 
 [www.sendo.vn]
-match = -25.0%%
-title = Chiếu nhựa gấp gọn size 4m, 3m chiếu ăn cơm hàng đẹp ...
-url = https://www.sendo.vn/chieu-nhua-gap-gon-size-4m-3m-chieu-an-com-hang-dep-nhieu-mau-109448350.html
+match = -7.1%%
+title = Chiếu Nhựa Văn Phòng Bền Đẹp, Rẻ Như Tặng, Chất ...
+url = https://www.sendo.vn/chieu-nhua-van-phong.htm
 
 [mia.vn]
 match = -39.3%%
