--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-23 21:47:54
+lastsearch = 2024-07-24 00:35:47
 
 [www.georgianicols.com]
 match = -192.3%%
@@ -27,19 +27,19 @@ title = License renewal procedures
 url = https://www.iihs.org/topics/older-drivers/license-renewal-laws-table
 
 [en.wikipedia.org]
-match = -160.0%%
-title = Svara
-url = https://en.wikipedia.org/wiki/Svara
+match = -23.1%%
+title = Japanese spider crab
+url = https://en.wikipedia.org/wiki/Japanese_spider_crab
 
 [www.facebook.com]
-match = -84.6%%
-title = 3:16 Healthcare | Bremen GA
-url = https://www.facebook.com/316Healthcare/
+match = -61.5%%
+title = Northwest Georgia Scanner
+url = https://www.facebook.com/NWGAScanner/
 
 [www.youtube.com]
-match = -338.5%%
-title = Matto ki Saikil Official Trailer | Prakash Jha | M. Gani | In ...
-url = https://www.youtube.com/watch?v=wwH3mdjbKac
+match = -269.2%%
+title = MAC Powder Kiss: Lip Workshop with Sylvia Gani | MAC ...
+url = https://www.youtube.com/watch?v=2OJn1qtw3WY
 
 [www.regmovies.com]
 match = -215.4%%
