--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-23 22:19:43
+lastsearch = 2024-07-24 00:30:02
 
 [en.wikipedia.org]
-match = 15.0%%
-title = Timeline of Korean history
-url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
+match = -12.5%%
+title = Gwangju Uprising
+url = https://en.wikipedia.org/wiki/Gwangju_Uprising
 
 [peacehistory-usfp.org]
 match = -45.0%%
@@ -22,9 +22,9 @@ title = North Korea claims it launched 18 missiles at once in ...
 url = https://www.nknews.org/2024/05/north-korea-claims-to-have-launched-18-missiles-at-once-in-major-test/
 
 [www.tiktok.com]
-match = -20.0%%
-title = Colombians Riot Hard Rock Cafe
-url = https://www.tiktok.com/discover/colombians-riot-hard-rock-cafe
+match = 0.0%%
+title = Oc Lounge and Garden Euro
+url = https://www.tiktok.com/discover/oc-lounge-and-garden-euro
 
 [www.2id.korea.army.mil]
 match = -25.0%%
