CI images update

--- a/images/chieu-cay-cao-bang-lua-18/config.ini
+++ b/images/chieu-cay-cao-bang-lua-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-18.html
 lastopen = 2024-06-09 22:41:28
 
 [search]
-lastsearch = 2024-07-23 23:21:06
+lastsearch = 2024-07-24 00:44:30
 
 [chieutruc.info]
 match = -60.0%%
@@ -32,9 +32,9 @@ title = "Trùm Gọi Vốn” Ở Cao Bằng Lừa Đảo Hơn 18 Tỷ Đồng |
 url = https://www.youtube.com/watch?v=NN5iWnFFa6Y
 
 [chieutrucsaigon.com]
-match = 44.0%%
-title = CHIẾU TRÚC THANH CAO BẰNG 1M8X2M
-url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m8x2m.html
+match = -4.0%%
+title = CHIẾU TRÚC CAO BẰNG CHÍNH HÃNG ĐƯỢC BÁN Ở ...
+url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-cao-bang-chinh-hang-duoc-ban-o-dau-71.html
 
 [hanggiadunghatinh.com]
 match = 40.0%%
@@ -185,4 +185,9 @@ url = http://www.chieutretruc.com/2017/12/dia-chi-mua-chieu-truc-cao-son-tai-hcm
 match = -20.0%%
 title = Chiếu Tre Cao bằng Nan to loại đẹp Mát Lạnh Mùa Hè
 url = https://www.lazada.vn/products/chieu-truc-long-chieu-tre-cao-bang-nan-to-loai-dep-mat-lanh-mua-he-du-tat-ca-cac-kich-thuoc-i2239379152.html
+
+[www.sendo.vn]
+match = -52.0%%
+title = Chiếu Trúc Cao Bằng Hàng Xịn, Giá Deal Sốc, Ship Cod ...
+url = https://www.sendo.vn/chieu-truc-cao-bang.htm
 
