CI images update

--- a/images/tham-giuong-bo-de-18/config.ini
+++ b/images/tham-giuong-bo-de-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-18.html
 lastopen = 2024-06-09 22:57:01
 
 [search]
-lastsearch = 2024-07-23 21:13:09
+lastsearch = 2024-07-24 01:38:23
 
 [erado.vn]
 match = 0.0%%
@@ -215,4 +215,9 @@ url = https://cucthongke.quangtri.gov.vn/article/qGS3JxoE/
 match = -150.0%%
 title = 7 vị trí lắp đặt điều hòa hợp lý cực hay có thể bạn chưa biết
 url = https://www.dienmayxanh.com/kinh-nghiem-hay/8-vi-tri-lap-dat-dieu-hoa-cuc-hay-cho-moi-nha-1119866
+
+[cafeland.vn]
+match = -120.0%%
+title = 5 loại thảm trải giường hot nhất hiện nay 2022 - CafeLand.Vn
+url = https://cafeland.vn/xu-huong/5-loai-tham-trai-giuong-hot-nhat-hien-nay-112172.html
 
