--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-07-24 00:37:18
+lastsearch = 2024-07-24 01:36:47
 
 [batdongsan.com.vn]
 match = -240.0%%
@@ -360,4 +360,9 @@ url = https://saca.com.vn/en/sgc.html
 match = -53.3%%
 title = Lắc eo bhs02 - Đồ chơi Bắc Hà
 url = https://dochoimamnon123.com/dung-cu-lac-lung-eo
+
+[timbus.vn]
+match = 0.0%%
+title = Tìm đường xe buýt
+url = http://timbus.vn/
 
