--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-07-23 22:18:44
+lastsearch = 2024-07-24 01:34:22
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -42,9 +42,9 @@ title = Ho Chi Minh ZIP code - The most updated ...
 url = https://phaata.com/en/zip-code/ho-chi-minh-zip-code-1309.html
 
 [www.youtube.com]
-match = -187.5%%
-title = ZEISS CP.3 Lenses - Hiro Matsuzaki on choosing your ...
-url = https://www.youtube.com/watch?v=q7DmMt9UmqQ
+match = -225.0%%
+title = Biến Cố Gia Đình - Tập 14 | Lồng Tiếng | Phim Bộ Tình Cảm ...
+url = https://www.youtube.com/watch?v=nhXTt3NmsW8
 
 [vietbis.vn]
 match = -193.8%%
@@ -122,9 +122,9 @@ title = DCINE Quy Nhơn
 url = https://www.dcine.vn/rap/dcine-quy-nhon-5.html
 
 [m.facebook.com]
-match = -66.7%%
-title = Kenh14.vn
-url = https://m.facebook.com/100064530256741/photos/893845009443166/
+match = -175.0%%
+title = Hóng Biến 47 | Cập nhật: 2 bé đã được gia đình đón về
+url = https://m.facebook.com/groups/hongbien47bymiscs/posts/1687332765435960/
 
 [kinhte.congthuong.vn]
 match = -218.8%%
@@ -405,4 +405,9 @@ url = https://www.cloudynights.com/topic/541231-14-vs-173-delos-for-dso/
 match = -212.5%%
 title = Xoilac TV - TTBD Euro hôm nay, bóng đá Xôi Lạc trực tuyến HD
 url = https://druidcitybrewing.com/
+
+[matkinhvietlong.com]
+match = 0.0%%
+title = MẮT KÍNH RAYBAN 62-14
+url = https://matkinhvietlong.com/products/mat-kinh-rayban-62-14
 
