--- a/images/chieu-truc-thai-den15/config.ini
+++ b/images/chieu-truc-thai-den15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den15.html
 lastopen = 2024-06-07 00:18:02
 
 [search]
-lastsearch = 2024-07-24 00:34:10
+lastsearch = 2024-07-24 01:32:46
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -22,9 +22,9 @@ title = chiếu tre thái lan loại 1 , hàng có sẵn m2xm9, m5x m9 ...
 url = https://shopee.vn/chiếu-tre-thái-lan-loại-1-hàng-có-sẵn-m2xm9-m5x-m9-m8x2m-2mx2m2-i.264060043.8153444972
 
 [demxanh.com]
-match = -81.0%%
-title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+match = 14.3%%
+title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
+url = https://demxanh.com/chieu-truc-den.html
 
 [www.lazada.vn]
 match = -85.7%%
@@ -440,4 +440,9 @@ url = https://carolin-e.pl/37758575-pim-sey-hiêp-dâm-tâp-thê.html
 match = -66.7%%
 title = Bài 134 - Đôi điều về mầu nhiệm Chúa Ba Ngôi
 url = https://hdgmvietnam.com/chi-tiet/giai-dap-thac-mac-cho-nguoi-tre-bai-133---doi-dieu-ve-mau-nhiem-chua-ba-ngoi
+
+[www.instagram.com]
+match = 19.0%%
+title = Minh Beta (@minhbeta)
+url = https://www.instagram.com/minhbeta/?hl=en
 
