--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-24 00:35:47
+lastsearch = 2024-07-24 01:37:17
 
 [www.georgianicols.com]
-match = -192.3%%
-title = Daily Horoscope for Saturday, July 20, 2024
-url = https://www.georgianicols.com/daily/
+match = -69.2%%
+title = Georgia Nicols | Georgia Nicols
+url = https://www.georgianicols.com/
 
 [www.galottery.com]
 match = -7.7%%
@@ -32,14 +32,14 @@ title = Japanese spider crab
 url = https://en.wikipedia.org/wiki/Japanese_spider_crab
 
 [www.facebook.com]
-match = -61.5%%
-title = Northwest Georgia Scanner
-url = https://www.facebook.com/NWGAScanner/
+match = -84.6%%
+title = 3:16 Healthcare | Bremen GA
+url = https://www.facebook.com/316Healthcare/
 
 [www.youtube.com]
-match = -269.2%%
-title = MAC Powder Kiss: Lip Workshop with Sylvia Gani | MAC ...
-url = https://www.youtube.com/watch?v=2OJn1qtw3WY
+match = -146.2%%
+title = The Gummy Bear Song - Long English Version
+url = https://www.youtube.com/watch?v=astISOttCQ0
 
 [www.regmovies.com]
 match = -215.4%%
@@ -570,4 +570,9 @@ url = https://www.kff.org/medicaid/issue-brief/medicaid-waiver-tracker-approved-
 match = 7.7%%
 title = Driver License
 url = https://www.dot.state.wy.us/home/driver_license_records/driver-license.html
+
+[1800lionlaw.com]
+match = -269.2%%
+title = Legal Driving Age By State (2024): Complete Licensing ...
+url = https://1800lionlaw.com/driving-age-by-state/
 
