--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-24 01:21:58
+lastsearch = 2024-07-24 01:33:20
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -52,9 +52,9 @@ title = Balancing Supply and Demand …. in the fast approaching ' ...
 url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-rawofftarget/
 
 [books.google.com]
-match = -123.8%%
-title = A Critical Pronouncing Dictionary, and Expositor of the ...
-url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKBv8xrsn&sig=ACfU3U1Yb6n2C-O_dmYeI9GucXCb8JC-jg&hl=en&sa=X&ved=2ahUKEwi6qZOAyL2HAxXaK1kFHU6NB6oQ6AF6BAgjEAM
+match = -142.9%%
+title = A critical pronouncing dictionary. With a suppl., by E. Smith
+url = https://books.google.com/books?id=cHoCAAAAQAAJ&pg=RA11-PA13&lpg=RA11-PA13&dq=nem+di+a+mon+9f+16+re&source=bl&ots=ubvkj9NC2P&sig=ACfU3U2DlFge0LovVhKONwlbgGjNMM7KNw&hl=en&sa=X&ved=2ahUKEwiW3fWq5r2HAxXQHzQIHaUWB9MQ6AF6BAgvEAM
 
 [www.diepxuan.com]
 match = -81.0%%
@@ -158,8 +158,8 @@ url = https://www.vulture.com/2021/03/kimbra-interview-gotye-somebody-that-i-use
 
 [aemo.com.au]
 match = -114.3%%
-title = Record Demand in South Australia & Victoria 28 to 31 ...
-url = https://aemo.com.au/-/media/files/electricity/nem/market_notices_and_events/market_event_reports/archive/180-0091-pdf.pdf
+title = NEM Reform Electricity Wholesale Consultative Forum ( ...
+url = https://aemo.com.au/-/media/files/stakeholder_consultation/working_groups/other_meetings/electricity-wholesale-consultative-forum/meeting-16-presentation.pdf?la=en
 
 [www.nitrc.org]
 match = -21.4%%
