--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-07-24 00:35:59
+lastsearch = 2024-07-24 01:35:07
 
 [www.lazada.vn]
 match = -88.9%%
@@ -22,14 +22,14 @@ title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng
 url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
 
 [thegioinem.com]
-match = -155.6%%
-title = TOP 12 thương hiệu nệm cao su khuyến mãi, giá rẻ tại ...
-url = https://thegioinem.com/top-12-thuong-hieu-nem-cao-su-khuyen-mai-gia-re-tai-thegioinem-com.html
+match = -105.6%%
+title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
+url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.facebook.com]
-match = -18.2%%
-title = NEM Fashion
-url = https://www.facebook.com/nemfashion.official/
+match = -27.8%%
+title = Siêu Thị Nệm | Ho Chi Minh City
+url = https://www.facebook.com/sieuthinem/
 
 [eva.vn]
 match = -150.0%%
