--- a/images/chan-3-kg/config.ini
+++ b/images/chan-3-kg/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-kg.html
 lastopen = 2024-06-09 21:50:05
 
 [search]
-lastsearch = 2024-07-24 01:23:53
+lastsearch = 2024-07-24 02:18:02
 
 [silverwow.net]
 match = -255.6%%
@@ -167,8 +167,8 @@ title = Cheong Chan Thick Caramel Sauce 大甲象標生晒油- 3kg
 url = https://jutongon.com/products/cheong-chan-thick-caramel-sauce-大甲象標生晒油-3kg
 
 [www.homedepot.com]
-match = 11.1%%
-title = Chains & Ropes
+match = -77.8%%
+title = Chain - Chains & Ropes
 url = https://www.homedepot.com/b/Hardware-Chains-Ropes-Chain/N-5yc1vZc2a3
 
 [www.kuerbisollisshop.de]
