--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-07-23 22:52:59
+lastsearch = 2024-07-24 02:13:36
 
 [burningman.org]
-match = -60.0%%
-title = The 10 Principles of Burning Man
-url = https://burningman.org/about/10-principles/
+match = 13.3%%
+title = Kids at Burning Man
+url = https://burningman.org/event/preparation/playa-living/kids/
 
 [www.usatoday.com]
 match = 0.0%%
