--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-24 01:49:25
+lastsearch = 2024-07-24 02:18:13
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -268,8 +268,8 @@ url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furiou
 
 [en.yna.co.kr]
 match = -160.0%%
-title = (Olympics) Confusion reigns after chaotic finish in short ...
-url = https://en.yna.co.kr/view/AEN20180213013100315
+title = S. Korean vice foreign minister holds bilateral meetings at ...
+url = https://en.yna.co.kr/view/AEN20171121002500315
 
 [www.vlr.gg]
 match = 5.6%%
@@ -370,4 +370,9 @@ url = https://www.90daykorean.com/korean-age-all-about-age-in-korea/
 match = 0.0%%
 title = 
 url = https://jhc-tkd.com/counting-in-korean/
+
+[edition.cnn.com]
+match = -70.0%%
+title = CNN: Breaking News, Latest News and Videos
+url = https://edition.cnn.com/
 
