CI images update

--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-24 01:53:02
+lastsearch = 2024-07-24 02:52:14
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -27,9 +27,9 @@ title = Chiếu Lác: Nơi bán giá rẻ, uy tín, chất lượng nhất
 url = https://websosanh.vn/s/chiếu+lác.htm
 
 [www.youtube.com]
-match = -200.0%%
-title = Vietnamese Baguette Recipe - BÁNH MÌ VIỆT NAM - KNEAD ...
-url = https://www.youtube.com/watch?v=yzQ6rCK8pJw
+match = -243.8%%
+title = Thị trường cà phê trong nước và thế giới biến động trái chiều ...
+url = https://www.youtube.com/watch?v=0vPz1cnaTNM
 
 [tuyensinh247.com]
 match = -225.0%%
@@ -327,9 +327,9 @@ title = uefa euro 2024|Châu Á: Điểm Hẹn Lý Tưởng Cho Người ...
 url = https://sinhvien.bcit.edu.vn/uefa euro 2024.shtml
 
 [baobacgiang.vn]
-match = -187.5%%
-title = Thanh niên đi xe máy ở Bắc Ninh luồn lách khiến người ...
-url = https://baobacgiang.vn/thanh-nien-di-xe-may-o-bac-ninh-luon-lach-khien-nguoi-xem-thot-tim-134000.bbg
+match = -225.0%%
+title = Nỗ lực tiêu thoát nước, tiếp tục cảnh báo sạt lở đất ở khu ...
+url = https://baobacgiang.vn/no-luc-tieu-thoat-nuoc-tiep-tuc-canh-bao-sat-lo-dat-o-khu-vuc-mien-nui-172455.bbg
 
 [vneconomy.vn]
 match = -206.2%%
@@ -440,4 +440,9 @@ url = https://langsontv.vn/news/451/73001/trong-danh-du-no-luc-tu-duong-ren-luye
 match = -68.8%%
 title = Cách Lần Hạt Mân Côi | CôngGiáo.org
 url = https://www.conggiao.org/cach-lan-hat-man-coi/
+
+[www.sacredheartschoolludhiana.com]
+match = -218.8%%
+title = Sacred Heart Sr. Sec. School, CBSE School in Ludhiana Punjab
+url = https://www.sacredheartschoolludhiana.com/
 
