--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-24 01:33:20
+lastsearch = 2024-07-24 02:50:25
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -54,7 +54,7 @@ url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-ra
 [books.google.com]
 match = -142.9%%
 title = A critical pronouncing dictionary. With a suppl., by E. Smith
-url = https://books.google.com/books?id=cHoCAAAAQAAJ&pg=RA11-PA13&lpg=RA11-PA13&dq=nem+di+a+mon+9f+16+re&source=bl&ots=ubvkj9NC2P&sig=ACfU3U2DlFge0LovVhKONwlbgGjNMM7KNw&hl=en&sa=X&ved=2ahUKEwiW3fWq5r2HAxXQHzQIHaUWB9MQ6AF6BAgvEAM
+url = https://books.google.com/books?id=cHoCAAAAQAAJ&pg=RA11-PA13&lpg=RA11-PA13&dq=nem+di+a+mon+9f+16+re&source=bl&ots=ubvkjaIy4U&sig=ACfU3U01xSl5IOtE3U_ysbMeH0YBdpeVIw&hl=en&sa=X&ved=2ahUKEwilkKDI972HAxWqD1kFHUeLBDAQ6AF6BAgfEAM
 
 [www.diepxuan.com]
 match = -81.0%%
