--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-07-24 02:27:24
+lastsearch = 2024-07-24 02:49:30
 
 [everon.online]
 match = 19.2%%
@@ -72,9 +72,9 @@ title = Fuji Master
 url = https://fujimaster.com.vn/
 
 [store.steampowered.com]
-match = -84.6%%
-title = Tiết kiệm đến 50%% khi mua Anno 1602 History Edition trên ...
-url = https://store.steampowered.com/app/2820130/Anno_1602_History_Edition/?l=vietnamese&utm_source=indienova&curator_clanid=9170052
+match = 7.7%%
+title = Anno 1800 - Steampunk Pack
+url = https://store.steampowered.com/app/2830580/Anno_1800__Steampunk_Pack/?l=vietnamese&snr=1_wishlist_4__wishlist-capsule
 
 [vi.wikipedia.org]
 match = -23.1%%
@@ -355,4 +355,14 @@ url = https://besthome.com.vn/noi-luoc-ga-1602-kings/
 match = 5.6%%
 title = Tất cả sản phẩm 3M
 url = https://www.3m.com.vn/3M/vi_VN/p/
+
+[nj.gov]
+match = 12.5%%
+title = ATLANTIC COUNTY - NJ.gov
+url = https://nj.gov/treasury/unclaimed-property/pdf/newspaper-2022/Atlantic.pdf
+
+[www.gso.gov.vn]
+match = 3.8%%
+title = Luật thống kê số 89/2015/QH13
+url = https://www.gso.gov.vn/wp-content/uploads/2019/11/Luật-thống-kê.pdf
 
