--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-07-24 01:38:12
+lastsearch = 2024-07-24 02:49:21
 
 [everon.online]
 match = -7.4%%
@@ -42,9 +42,9 @@ title = Bộ Everon Epm-21060
 url = https://everon.net.vn/everon/2109/bo-everon-epm-21060
 
 [sieuthidemhanquoc.com.vn]
-match = 22.2%%
-title = Bộ chăn ga gối Everon EPM-21070
-url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-epm-21070-1529
+match = 18.5%%
+title = Bộ chăn ga gối Everon EPT-21045
+url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-ept-21045-1527
 
 [shopee.vn]
 match = -44.4%%
