--- a/images/chieu-gap-dai-loan-16/config.ini
+++ b/images/chieu-gap-dai-loan-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-16.html
 lastopen = 2024-06-09 21:46:43
 
 [search]
-lastsearch = 2024-07-24 00:18:12
+lastsearch = 2024-07-24 02:49:01
 
 [www.diepxuan.com]
-match = 19.0%%
-title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
+match = 14.3%%
+title = Chiếu gấp Đài Loan 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html
 
 [noithatdaithanh.vn]
 match = -47.6%%
@@ -22,9 +22,9 @@ title = Đài Loan vớt 16 thi thể, nghi toàn người Việt trong đườn
 url = https://www.voatiengviet.com/a/7026996.html
 
 [www.youtube.com]
-match = -128.6%%
-title = Lồng Tiếng | CHỊU THUA TRƯỚC EM - Tập 16 | Trọn Bộ Phim ...
-url = https://www.youtube.com/watch?v=Ieb3ZcvtGyI
+match = -152.4%%
+title = Tin BĐ - Đài Loan 16/4: Cuộc tập trận bất ngờ của Việt Nam là ...
+url = https://www.youtube.com/watch?v=az-kArlkKTA
 
 [m.facebook.com]
 match = -95.2%%
@@ -72,9 +72,9 @@ title = Đài Loan – Wikipedia tiếng Việt
 url = https://vi.wikipedia.org/wiki/Đài_Loan
 
 [www.roc-taiwan.org]
-match = -76.2%%
-title = Văn phòng Kinh tế và Văn hóa Đài Bắc tại Việt Nam
-url = https://www.roc-taiwan.org/vn_vi/index.html
+match = -128.6%%
+title = Thông tin lãnh sự - Văn phòng Kinh tế và Văn hóa Đài Bắc ...
+url = https://www.roc-taiwan.org/vn_vi/cat/47.html
 
 [zh.wikipedia.org]
 match = -9.5%%
