--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-23 22:34:26
+lastsearch = 2024-07-24 02:47:02
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.youtube.com]
-match = -225.0%%
-title = Lụy Tình (H2O Remix) - Trung Dio x Tú GG | Thế Gian Tình ...
-url = https://www.youtube.com/watch?v=SclNBMD7eS0
+match = -193.8%%
+title = TIN CHIỀU 23/5: “TÔI TIN M.U SẼ TRỞ LẠI ĐỈNH CAO”, PEP ...
+url = https://www.youtube.com/watch?v=Y4c6LlBM7qY
 
 [hawater.com.vn]
 match = -75.0%%
