--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-uc-16.html
 lastopen = 2024-06-07 01:01:59
 
 [search]
-lastsearch = 2024-07-23 20:30:49
+lastsearch = 2024-07-24 02:52:57
 
 [us.misumi-ec.com]
 match = -350.0%%
@@ -27,9 +27,9 @@ title = Phu Ha - Lawrenceville, Georgia, United States
 url = https://www.linkedin.com/in/phu-ha-b87850148
 
 [www.gwhospital.com]
-match = 0.0%%
-title = 
-url = https://www.gwhospital.com/about
+match = -275.0%%
+title = Welcome to GW University Hospital | Washington, DC
+url = https://www.gwhospital.com/
 
 [finance.saccounty.gov]
 match = -150.0%%
@@ -290,4 +290,9 @@ url = https://www.fsu.edu/
 match = -133.3%%
 title = Pho Ga An Nam - Restaurant Reviews
 url = https://www.yelp.com/biz/pho-ga-an-nam-san-jose
+
+[www.fwe.com]
+match = -58.3%%
+title = Warranty Registration
+url = https://www.fwe.com/sales-and-support/warranty
 
