--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-23 20:05:29
+lastsearch = 2024-07-24 02:47:25
 
 [www.tiktok.com]
 match = -170.6%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -194.1%%
-title = Bradshaw's General Railway and Steam Navigation Guide for ...
-url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+16&source=bl&ots=rUQ5DqDE54&sig=ACfU3U1CgCb4H-OkZz8OrxCSB78ecOztMg&hl=en&sa=X&ved=2ahUKEwjN4cK_5LyHAxXkAHkGHSYtABQQ6AF6BAgZEAM
+match = -217.6%%
+title = The new army list, by H.G. Hart [afterw.] Hart's army list. ...
+url = https://books.google.com/books?id=8-8NAAAAQAAJ&pg=RA1-PA596&lpg=RA1-PA596&dq=man+in+hoa+dep+16&source=bl&ots=2ilmVAwX1J&sig=ACfU3U17xAnyngletqE3NbZN2d1hrLmJOA&hl=en&sa=X&ved=2ahUKEwjEtMXy9r2HAxWbF1kFHd1sD58Q6AF6BAgXEAM
 
 [tax.vermont.gov]
 match = -29.4%%
