--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-07-24 01:53:25
+lastsearch = 2024-07-24 02:45:22
 
 [shopee.vn]
 match = -171.4%%
@@ -32,9 +32,9 @@ title = Mùng Chụp Tự Bung Người Lớn chống muỗi BẢO BẢO
 url = https://www.mantubung.com/mung-chup-tu-bung.html
 
 [www.lazada.vn]
-match = -185.7%%
-title = Mùng /Màn Ngủ Tự Bung METTA - 1M2 x 1M 9 - BH 18 tháng
-url = https://www.lazada.vn/products/mung-man-ngu-tu-bung-metta-1m2-x-1m-9-bh-18-thang-hang-chinh-hang-viet-nam-xuat-khau-i691714886.html
+match = -164.3%%
+title = Màn chụp tự bung đỉnh vuông Cao Cấp. Mùng gấp ...
+url = https://www.lazada.vn/products/man-chup-tu-bung-dinh-vuong-cao-cap-mung-gap-dinh-vuong-co-chan-vien-gia-tan-xuong-bh-18-thang-i1643502299.html
 
 [www.mungbaobao.com]
 match = -214.3%%
