--- a/images/nem-diamond-re-160x200x09/config.ini
+++ b/images/nem-diamond-re-160x200x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-diamond-re-160x200x09.html
 lastopen = 2024-06-10 12:36:25
 
 [search]
-lastsearch = 2024-07-24 02:29:49
+lastsearch = 2024-07-24 02:53:06
 
 [www.reddit.com]
 match = -60.0%%
@@ -32,9 +32,9 @@ title = F&B Showcase: Custom 9mm NEO Diamond Cut Moissanite ...
 url = https://www.youtube.com/watch?v=7RkaOW1Bqqw
 
 [www.amazon.com]
-match = -36.0%%
-title = Amazon.com: Customer Questions & Answers
-url = https://www.amazon.com/ask/questions/asin/B000RJQH2Y
+match = -68.0%%
+title = 9.5 Inch Diamond Ceramic Coated Nonstick Frying Pan ...
+url = https://www.amazon.com/DiamoTech-Diamond-Nonstick-Ultra-Durable-Ergonomic/dp/B0BYLRKRQG
 
 [forums.anandtech.com]
 match = -76.0%%
@@ -85,4 +85,19 @@ url = https://www.hidefninja.com/community/threads/interstellar-neo-pack-collect
 match = -27.8%%
 title = Dutch 120mm Mortar
 url = https://forum.cartridgecollectors.org/t/dutch-120mm-mortar/297
+
+[www.kymdan.com]
+match = -44.0%%
+title = Kymdan natural latex mattresses and pillows
+url = https://www.kymdan.com/san-pham/nem-kymdan-deluxe?lang=en
+
+[nemvanthanh.vn]
+match = -20.0%%
+title = Diamond coil mattress - NỆM VẠN THÀNH
+url = https://nemvanthanh.vn/product/nem-lo-xo-diamond/?lang=en
+
+[www.kymdan.us]
+match = -16.0%%
+title = KYMDAN | Our Quality Your Comfort
+url = https://www.kymdan.us/
 
