--- a/images/chieu-lac-d2-09/config.ini
+++ b/images/chieu-lac-d2-09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-09.html
 lastopen = 2024-06-21 06:29:43
 
 [search]
-lastsearch = 2024-07-24 00:38:23
+lastsearch = 2024-07-24 03:34:03
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -77,9 +77,9 @@ title = Học cờ vua nâng cao
 url = https://www.cothongminh.com/tai-lieu-hoc-co-vua/26-hoc-co-vua-nang-cao?start=3
 
 [www.facebook.com]
-match = -30.0%%
-title = 29 tháng 2
-url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=vi_VN
+match = -180.0%%
+title = Bệnh Viện Hoàn Mỹ Minh Hải - NỘI SOI LẤY DỊ VẬT ...
+url = https://www.facebook.com/photo.php?fbid=732691348858537&id=100063530351491&set=a.536813015113039&locale=is_IS
 
 [duhocdoubleh.edu.vn]
 match = -193.3%%
@@ -470,4 +470,19 @@ url = https://dulich.binhduong.gov.vn/en/edittour/?tourid=8703
 match = -173.3%%
 title = Store Locator - Circle K VietnamCircle K Vietnam
 url = https://www.circlek.com.vn/en/store-locator/
+
+[www.bluewaterropes.com]
+match = -20.0%%
+title = 9mm CanyonLine - Rope
+url = https://www.bluewaterropes.com/product/9mm-canyon-rope/
+
+[hunglien.net]
+match = 33.3%%
+title = Chiếu lạc - Hưng Liên
+url = http://hunglien.net/san-pham/chieu-lac/
+
+[www.marinetraffic.com]
+match = -220.0%%
+title = Vessel Characteristics: Ship 09 LOY MUC D2 (High Speed ...
+url = https://www.marinetraffic.com/en/ais/details/ships/shipid:7192607/mmsi:574221413/imo:0/vessel:09_LOY_MUC_D2
 
