--- a/images/chieu-truc-cong-ty-16-20/config.ini
+++ b/images/chieu-truc-cong-ty-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-20.html
 lastopen = 2024-06-09 23:50:30
 
 [search]
-lastsearch = 2024-07-24 02:25:52
+lastsearch = 2024-07-24 03:29:54
 
 [chieutrelanlan.com]
 match = -41.7%%
@@ -52,14 +52,14 @@ title = Hôm nay mới được nằm thử chiếc chiếu trúc, vô cùng má
 url = https://www.youtube.com/watch?v=kKMas4N_KAk
 
 [www.facebook.com]
-match = 5.3%%
-title = Thế Giới Chiếu Trúc
-url = https://www.facebook.com/thegioichieutruc/
+match = 4.2%%
+title = CHIẾU TRE GIÁ RẺ | Ho Chi Minh City
+url = https://www.facebook.com/chieutregiare/
 
 [chieutrucsaigon.com]
-match = -12.5%%
-title = CHIẾU TRÚC CAO BẰNG CHÍNH HÃNG ĐƯỢC BÁN Ở ...
-url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-cao-bang-chinh-hang-duoc-ban-o-dau-71.html
+match = 8.3%%
+title = BÁN CHIẾU TRÚC MẮT NHỎ 1M6 HƯƠNG TRÚC
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/ban-chieu-truc-mat-nho-1m6-huong-truc-70.html
 
 [www.xskthcm.com]
 match = -83.3%%
