--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-24 02:33:17
+lastsearch = 2024-07-24 03:35:32
 
 [screenrant.com]
 match = 0.0%%
@@ -87,9 +87,9 @@ title = Green card
 url = https://en.wikipedia.org/wiki/Green_card
 
 [www.imdb.com]
-match = -57.1%%
-title = Blue Water, White Death (1971)
-url = https://www.imdb.com/title/tt0146496/
+match = -7.1%%
+title = The Guardian (2006)
+url = https://www.imdb.com/title/tt0406816/
 
 [www.boundless.com]
 match = -128.6%%
