--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-07-24 02:45:22
+lastsearch = 2024-07-24 03:34:46
 
 [shopee.vn]
 match = -171.4%%
@@ -19,17 +19,17 @@ url = https://mungthienmetta.com/mung-man-ngu-metta-tu-bung/new2021-mung-ngu-met
 [tiki.vn]
 match = -221.4%%
 title = Màn chụp tự bung đỉnh vuông, giá xưởng, hàng việt nam ...
-url = https://tiki.vn/man-chup-tu-bung-dinh-vuong-gia-xuong-hang-viet-nam-100-bao-hanh-18-thang-mung-tu-bung-cao-cap-p170076693.html?spid=175465914
+url = https://tiki.vn/man-chup-tu-bung-dinh-vuong-gia-xuong-hang-viet-nam-100-bao-hanh-18-thang-mung-tu-bung-cao-cap-p170076693.html?spid=175465922
 
 [manthutrang.com]
-match = -200.0%%
-title = MÀN NGỦ CAO CẤP CHO GIA ĐÌNH & KHÁCH SẠN – MÀN ...
-url = https://manthutrang.com/
+match = -207.1%%
+title = Hướng dẫn phân biệt màn tự bung cao cấp và màn nhái ...
+url = https://manthutrang.com/blogs/news/huong-dan-phan-biet-man-tu-bung-cao-cap-va-man-nhai-gia-re
 
 [www.mantubung.com]
-match = -150.0%%
-title = Mùng Chụp Tự Bung Người Lớn chống muỗi BẢO BẢO
-url = https://www.mantubung.com/mung-chup-tu-bung.html
+match = -228.6%%
+title = Mùng Chụp | Màn Tự Bung Thông Minh Chống Muỗi | Khuyến ...
+url = https://www.mantubung.com/
 
 [www.lazada.vn]
 match = -164.3%%
