--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-07-24 02:24:52
+lastsearch = 2024-07-24 03:36:30
 
 [www.diepxuan.com]
 match = 27.3%%
@@ -13,8 +13,8 @@ url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
 
 [demxanh.com]
 match = -22.7%%
-title = Thảm trải giường lông cừu TLC 06 - Hà Nội
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
+title = Thảm trải giường cao su non màu xanh ngọc
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-ngoc.html
 
 [www.lazada.vn]
 match = -113.6%%
