CI images update

--- a/images/chieu-du-lichvt-22-3m/config.ini
+++ b/images/chieu-du-lichvt-22-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lichvt-22-3m.html
 lastopen = 2024-06-09 21:46:25
 
 [search]
-lastsearch = 2024-07-24 01:37:51
+lastsearch = 2024-07-24 04:14:22
 
 [vnexpress.net]
 match = -128.6%%
@@ -47,8 +47,8 @@ title = Côn Đảo khai mạc đường hoa, khu vui Xuân và ẩm thực ...
 url = https://www.baobariavungtau.com.vn/du-lich/202402/con-dao-khai-mac-duong-hoa-khu-vui-xuan-va-am-thuc-xuan-1003168/index.htm
 
 [www.etrip4u.com]
-match = -52.4%%
-title = Những địa điểm du lịch ở Vũng Tàu đẹp - Etrip4u
+match = -71.4%%
+title = Những địa điểm du lịch ở Vũng Tàu siêu đẹp nên biết
 url = https://www.etrip4u.com/du-lich/mach-ban-nhung-dia-diem-du-lich-o-vung-tau-sieu-dep
 
 [www.gt-rider.com]
@@ -197,9 +197,9 @@ title = Những địa điểm vui chơi, check in cực đẹp tại Vũng Tàu
 url = https://www.24h.com.vn/du-lich-24h/nhung-dia-diem-vui-choi-check-in-cuc-dep-tai-vung-tau-c76a1387112.html
 
 [baobariavungtau.com.vn]
-match = -95.2%%
-title = Mở tour khách lẻ tham quan Nông trại cuộc sống xanh
-url = https://baobariavungtau.com.vn/du-lich/201712/chi-nhanh-smiletour-ba-ria-mo-tour-khach-le-tham-quan-nong-trai-cuoc-song-xanh-773046/index.htm
+match = -81.0%%
+title = Những điểm vui chơi thả ga tại Vũng Tàu dịp lễ 30/4
+url = https://baobariavungtau.com.vn/du-lich/202404/nhung-diem-vui-choi-tha-ga-tai-vung-tau-dip-le-304-1008416/
 
 [mia.vn]
 match = -128.6%%
@@ -340,4 +340,9 @@ url = https://baodautu.vn/cong-ty-co-phan-du-lich-cap-treo-vung-tau-bi-phat-150-
 match = -57.1%%
 title = TOUR DU LỊCH AN GIANG ĐI VŨNG TÀU 2 NGÀY 1 ĐÊM
 url = https://chieutour.com.vn/chuong-trinh-tour/chum-tour-vung-tau/tour-an-giang-vung-tau-2-ngay-1-dem.html
+
+[tpvt.vungtau.baria-vungtau.gov.vn]
+match = -33.3%%
+title = Khu du lịch cáp treo - Hồ Mây Vũng Tàu.
+url = http://tpvt.vungtau.baria-vungtau.gov.vn/web/guest/du-lich-vung-tau/-/brvt/extAssetPublisher/content/333393/khu-du-lich-cap-treo-ho-may-vung-tau
 
