--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-23 14:33:22
+lastsearch = 2024-07-24 04:19:12
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -12,9 +12,9 @@ title = Hướng dẫn đo size lắc và vòng tay
 url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [baomoi.com]
-match = -218.8%%
-title = Người phụ nữ nước ngoài vận chuyển 'thuê' 2,4 kg ma túy ...
-url = https://baomoi.com/nguoi-phu-nu-nuoc-ngoai-van-chuyen-thue-2-4-kg-ma-tuy-lanh-an-tu-hinh-c49707500.epi
+match = -168.8%%
+title = Nóp cỏ bàng và chiếu lác - Tạp chí Văn Hóa & Phát Triển
+url = https://baomoi.com/nop-co-bang-va-chieu-lac-c40335029.epi
 
 [www.thegioididong.com]
 match = -231.2%%
@@ -62,9 +62,9 @@ title = Rạp Lotte Kosmo Tây Hồ - Lịch chiếu, Giá vé, Ưu đãi
 url = https://moveek.com/rap/lotte-kosmo-tay-ho/
 
 [baolongan.vn]
-match = -31.2%%
-title = Giữ nghề dệt chiếu Long Cang
-url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
+match = -125.0%%
+title = Một ngày ở làng dệt chiếu lác Long Cang, Cần Đước
+url = https://baolongan.vn/mot-ngay-o-lang-det-chieu-lac-long-cang-can-duoc-a5230.html
 
 [www.youtube.com]
 match = -218.8%%
@@ -242,9 +242,9 @@ title = số liệu tỉnh thành phố
 url = https://sanchoicongdantoancau.com/news/idgH6VVS8X8dMvmfmoZ2yTNFXYyW8u7spjkxVCEQ.xlsx
 
 [tamanhhospital.vn]
-match = -200.0%%
-title = Mắt lé là sao? Dấu hiệu nhận biết và nguyên nhân bị bệnh
-url = https://tamanhhospital.vn/mat-le/
+match = -218.8%%
+title = Thai máy ở vị trí nào? Hướng dẫn cách nhận biết và theo dõi
+url = https://tamanhhospital.vn/thai-may/
 
 [en.wikipedia.org]
 match = -6.2%%
