--- a/images/chieu-truc-den-12/config.ini
+++ b/images/chieu-truc-den-12/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-truc-den-12.html
 lastopen = 2024-06-07 00:20:09
 
 [search]
-lastsearch = 2024-07-24 01:50:18
+lastsearch = 2024-07-24 04:20:15
 
 [demxanh.com]
-match = -17.6%%
-title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html
+match = -94.1%%
+title = Mua chiếu trúc, đến ngay Đệm Xanh - Tổng hợp ...
+url = https://demxanh.com/mua-chieu-truc-den-ngay-dem-xanh-tong-hop-chieu-sieu-mat-2022.html
 
 [chieutrelanlan.com]
-match = -100.0%%
-title = Chiếu trúc mắt nhỏ có viền màu đen 160x190cm (1m6)
-url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-co-vien-mau-den-160x190cm-33.html
+match = -58.8%%
+title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
+url = https://chieutrelanlan.com/chieu-truc-p17.html
 
 [thegioidemtot.vn]
 match = -58.8%%
@@ -37,9 +37,9 @@ title = Chiếu trúc hạt đen cao cấp, bền , đẹp, Hàng Loại I
 url = https://shopee.vn/Chiếu-trúc-hạt-đen-cao-cấp-bền-đẹp-Hàng-Loại-I-i.296736591.9319890080
 
 [vongxepsaigon.vn]
-match = -158.8%%
-title = chiếu trúc có viền - Võng Xếp Chính Hãng Giá Rẻ Nhất TPHCM
-url = https://vongxepsaigon.vn/chieu-truc-co-vien/
+match = -117.6%%
+title = Chiếu trúc chiếu tre 1m2 hạt nâu đen hàng tốt loại 1
+url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-1m2-hat-nau-den-hang-tot-loai-1/
 
 [www.diepxuan.com]
 match = -64.7%%
