--- a/images/tham-ghe-da-dai/config.ini
+++ b/images/tham-ghe-da-dai/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da-dai.html
 lastopen = 2024-06-07 00:36:57
 
 [search]
-lastsearch = 2024-07-24 00:45:35
+lastsearch = 2024-07-24 04:19:45
 
 [shopee.vn]
 match = -126.7%%
@@ -32,9 +32,9 @@ title = 30+ Mẫu Ghế Gỗ Da Đẹp Cho Không Gian Bài Trí Sang ...
 url = https://anmoc.vn/blogs/news/ghe-go-da
 
 [ghedamienbac.com]
-match = -133.3%%
-title = Cung Cấp Bàn Ghế Đá Miền Bắc Giá Rẻ,Mẫu Mã Đẹp
-url = https://ghedamienbac.com/ban-ghe-da/
+match = -120.0%%
+title = BÀN GHẾ ĐÁ SÂN VƯỜN MIỀN BẮC - 0981.488.850
+url = https://ghedamienbac.com/ban-ghe-da-san-vuon/
 
 [bangheda.info]
 match = -140.0%%
@@ -90,4 +90,9 @@ url = https://thamtraisangiadinh.com/tham-trai-ghe-cat-theo-kich-thuoc-ghe-tg304
 match = -180.0%%
 title = Tiết Lộ 99+ Mẫu Ghế Sofa Da Cao Cấp Hot Nhất Năm 2024
 url = https://luxcasa.vn/ghe-sofa-da/
+
+[ghedasaigon.com]
+match = -173.3%%
+title = GIÁ GHẾ ĐÁ | GIÁ XƯỞNG SẢN XUẤT [GIAO HÀNG TẬN NƠI]
+url = https://ghedasaigon.com/gia-bo-ban-ghe-da/
 
