--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-07-24 02:53:15
+lastsearch = 2024-07-24 04:19:03
 
 [www.diepxuan.com]
-match = 50.0%%
-title = Điệp Xuân Thảm giường nỉ 180x200
+match = 40.9%%
+title = Thảm giường nỉ 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
 
 [demxanh.com]
