--- a/images/bo-bon-mua-chun-chan-140x190/config.ini
+++ b/images/bo-bon-mua-chun-chan-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-140x190.html
 lastopen = 2024-06-06 16:45:05
 
 [search]
-lastsearch = 2024-07-24 01:24:48
+lastsearch = 2024-07-24 04:29:28
 
 [www.everonvn.vn]
 match = -50.0%%
@@ -12,19 +12,19 @@ title = Everon EPT20041 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
 url = https://www.everonvn.vn/chi-tiet/Everon-EPT20041.html
 
 [everon.online]
-match = -53.6%%
-title = Tổng Đại Lý Chăn Ga Gối Đệm Everon Artemis King Koil
-url = https://everon.online/collections/dem-everon-kich-thuoc-1m4-140-190-140-200-140x190-140x200
+match = 6.7%%
+title = Bộ ga chun chần
+url = https://everon.online/collections/types?q=bo-ga-chun-chan
 
 [www.diepxuan.com]
-match = 3.6%%
-title = Chiếu gấp Đài Loan 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-140x190.html
+match = -3.6%%
+title = Bộ chăn bốn mùa EPC21053 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/bo-chan-bon-mua-epc21053-180x200.html?srsltid=AfmBOoqbdvwgDibcuVFqBznRVH-5SJGXh7poB-bRCFt97Gqp_WzSyTiC
 
 [demxanh.com]
 match = -32.1%%
 title = Đệm bốn mùa Olympia Massage vải gấm xốp chính hãng
-url = https://demxanh.com/dem-bon-mua-olympia-massage-vai-gam-xop.html
+url = https://demxanh.com/dem-bon-mua-olympia-massage-vai-gam-xop.html?srsltid=AfmBOopGaywU_YSgMQB2Q4QNwHkeojPRstl_QQzcrqAGVExXjAtgVMBW
 
 [everonminhkhai.com]
 match = -26.7%%
@@ -34,7 +34,7 @@ url = https://everonminhkhai.com/product-category/chan-ga-goi/bo-chan-ga/bo-chan
 [everonvn.com.vn]
 match = -32.1%%
 title = Đệm Bông Ép Vỏ Gấm Everon Giảm 20%% Hàng Chính Hãng
-url = https://everonvn.com.vn/everon/77/dem-bong-ep-everon
+url = https://everonvn.com.vn/everon/77/dem-bong-ep-everon?srsltid=AfmBOoo-o4FHVK6qeGmx6K04qUlY5qnh2VDo8lVaLivRHtcP1ucX6f_M
 
 [changagoidemsonghong.com]
 match = -53.6%%
