--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-07-24 02:13:05
+lastsearch = 2024-07-24 04:37:26
 
 [hk.linkedin.com]
-match = 7.7%%
-title = Coco Chan - Innity
-url = https://hk.linkedin.com/in/coco-chan-63ba63169
+match = -123.1%%
+title = Chan cocoo - Freelance (Self employed)
+url = https://hk.linkedin.com/in/chan-cocoo-2aa4362b1
 
 [www.instagram.com]
 match = -238.5%%
