--- a/images/chieu-cay-dai-loan-vien-da14/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da14.html
 lastopen = 2024-06-09 22:14:06
 
 [search]
-lastsearch = 2024-07-23 22:16:58
+lastsearch = 2024-07-24 04:37:17
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -108,8 +108,8 @@ url = https://www.24h.com.vn/bong-da/14-nam-rooney-ra-mat-mu-hat-trick-huyen-tho
 
 [www.facebook.com]
 match = -25.0%%
-title = HÀNH TRÌNH “PEEL DA” 14 NGÀY BẰNG MANDELIC ...
-url = https://www.facebook.com/trustpluscuanam/photos/a.113295247201464/113295160534806/?type=3
+title = Chợ Cư dân Imperial Place Bình Tân - Natural Poem
+url = https://www.facebook.com/groups/choonlinebinhtan/
 
 [trongdoitam1.mysapo.net]
 match = 14.3%%
