--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-07-24 03:34:46
+lastsearch = 2024-07-24 04:35:43
 
 [shopee.vn]
 match = -171.4%%
@@ -22,9 +22,9 @@ title = Màn chụp tự bung đỉnh vuông, giá xưởng, hàng việt nam ..
 url = https://tiki.vn/man-chup-tu-bung-dinh-vuong-gia-xuong-hang-viet-nam-100-bao-hanh-18-thang-mung-tu-bung-cao-cap-p170076693.html?spid=175465922
 
 [manthutrang.com]
-match = -207.1%%
-title = Hướng dẫn phân biệt màn tự bung cao cấp và màn nhái ...
-url = https://manthutrang.com/blogs/news/huong-dan-phan-biet-man-tu-bung-cao-cap-va-man-nhai-gia-re
+match = -228.6%%
+title = Hướng dẫn sử dụng màn tự bung đỉnh rộng chân vải Thu Trang
+url = https://manthutrang.com/blogs/video/huong-dan-su-dung-man-tu-bung-dinh-rong-chan-vai-thu-trang
 
 [www.mantubung.com]
 match = -228.6%%
@@ -43,8 +43,8 @@ url = https://www.mungbaobao.com/
 
 [www.bible.com]
 match = -142.9%%
-title = THUPUAN 18 | MIZOVBSI Bible | YouVersion
-url = https://www.bible.com/bible/253/REV.18.MIZOVBSI
+title = MATHAIA 18 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/MAT.18.MIZCLBSI
 
 [mungchup.com]
 match = -164.3%%
