--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-24 01:53:37
+lastsearch = 2024-07-24 04:30:00
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -52,9 +52,9 @@ title = Name: Paul David Adams Address
 url = https://cci.lbl.gov/~paul/Adams-CV-12-2023.pdf
 
 [profiles.ucsf.edu]
-match = -6.2%%
-title = Spencer Behr, MD
-url = https://profiles.ucsf.edu/spencer.behr
+match = -30.0%%
+title = Joel Palefsky, MD - UCSF Profiles
+url = https://profiles.ucsf.edu/joel.palefsky
 
 [www.ncbi.nlm.nih.gov]
 match = -130.0%%
@@ -62,9 +62,9 @@ title = Exercise in patients with inflammatory bowel diseases
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5743119/
 
 [profiles.ucla.edu]
-match = -6.7%%
-title = Bogdan Pasaniuc
-url = https://profiles.ucla.edu/bogdan.pasaniuc
+match = 0.0%%
+title = Daniel H Geschwind
+url = https://profiles.ucla.edu/daniel.geschwind
 
 [www.sec.gov]
 match = -20.0%%
@@ -87,9 +87,9 @@ title = Electrical Transport Mechanisms of ITO/a-Si:H Schottky Diode
 url = https://uwaterloo.ca/giga-to-nanoelectronics-centre/sites/default/files/uploads/documents/annual_report_2002-2005.pdf
 
 [som.cuanschutz.edu]
-match = -170.0%%
-title = Kurt Stenmark, MD Professor, Pediatrics-Critical Care Medicine
-url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/15570
+match = -145.0%%
+title = Antonio Jimeno, MD, PhD - School of Medicine - CU Anschutz
+url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/3752
 
 [www.dir.ca.gov]
 match = -28.6%%
