CI images update

--- a/images/chieu-lac-d2-09/config.ini
+++ b/images/chieu-lac-d2-09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-09.html
 lastopen = 2024-06-21 06:29:43
 
 [search]
-lastsearch = 2024-07-24 03:34:03
+lastsearch = 2024-07-24 04:46:09
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -77,9 +77,9 @@ title = Học cờ vua nâng cao
 url = https://www.cothongminh.com/tai-lieu-hoc-co-vua/26-hoc-co-vua-nang-cao?start=3
 
 [www.facebook.com]
-match = -180.0%%
-title = Bệnh Viện Hoàn Mỹ Minh Hải - NỘI SOI LẤY DỊ VẬT ...
-url = https://www.facebook.com/photo.php?fbid=732691348858537&id=100063530351491&set=a.536813015113039&locale=is_IS
+match = -30.0%%
+title = 29 tháng 2
+url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=vi_VN
 
 [duhocdoubleh.edu.vn]
 match = -193.3%%
@@ -485,4 +485,9 @@ url = http://hunglien.net/san-pham/chieu-lac/
 match = -220.0%%
 title = Vessel Characteristics: Ship 09 LOY MUC D2 (High Speed ...
 url = https://www.marinetraffic.com/en/ais/details/ships/shipid:7192607/mmsi:574221413/imo:0/vessel:09_LOY_MUC_D2
+
+[www.tripadvisor.com.vn]
+match = -213.3%%
+title = Kiwooza Planet D2 (Thiso Mall Thu Thiem) - Tripadvisor
+url = https://www.tripadvisor.com.vn/Attraction_Review-g293925-d26856619-Reviews-Kiwooza_Planet_D2_Thiso_Mall_Thu_Thiem-Ho_Chi_Minh_City.html
 
