--- a/images/chieu-truc-cong-ty-16-20/config.ini
+++ b/images/chieu-truc-cong-ty-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-20.html
 lastopen = 2024-06-09 23:50:30
 
 [search]
-lastsearch = 2024-07-24 03:29:54
+lastsearch = 2024-07-24 04:51:31
 
 [chieutrelanlan.com]
 match = -41.7%%
@@ -52,14 +52,14 @@ title = Hôm nay mới được nằm thử chiếc chiếu trúc, vô cùng má
 url = https://www.youtube.com/watch?v=kKMas4N_KAk
 
 [www.facebook.com]
-match = 4.2%%
-title = CHIẾU TRE GIÁ RẺ | Ho Chi Minh City
-url = https://www.facebook.com/chieutregiare/
+match = 5.3%%
+title = Thế Giới Chiếu Trúc
+url = https://www.facebook.com/thegioichieutruc/
 
 [chieutrucsaigon.com]
-match = 8.3%%
-title = BÁN CHIẾU TRÚC MẮT NHỎ 1M6 HƯƠNG TRÚC
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/ban-chieu-truc-mat-nho-1m6-huong-truc-70.html
+match = -14.3%%
+title = TIN TRONG NƯỚC
+url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/
 
 [www.xskthcm.com]
 match = -83.3%%
