--- a/images/nem-sieu-nhe-5f-14/config.ini
+++ b/images/nem-sieu-nhe-5f-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-5f-14.html
 lastopen = 2024-06-09 23:19:00
 
 [search]
-lastsearch = 2024-07-24 04:34:52
+lastsearch = 2024-07-24 04:52:53
 
 [tuhung.net]
-match = -77.8%%
-title = Lưu trữ Nệm PE Hàn Quốc - Nội Thất Tứ Hưng
-url = https://tuhung.net/danh-muc-san-pham/nem-pe-han-quoc/
+match = -116.7%%
+title = Lưu trữ Nệm PE Hàn Quốc dày 3F - Nội Thất Tứ Hưng
+url = https://tuhung.net/danh-muc-san-pham/nem-pe-han-quoc/nem-pe-han-quoc-day-3f/
 
 [shopee.vn]
 match = -122.2%%
