--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-07-24 04:33:20
+lastsearch = 2024-07-24 05:18:15
 
 [www.youtube.com]
-match = -121.1%%
-title = Cây hoa mộc hương sau 2 tháng tạo tán cây đã rất đẹp
-url = https://www.youtube.com/watch?v=Z5dWoPtuKqA
+match = -126.3%%
+title = Cây hoa mộc,cây hoa mộc hương ra hoa nhiều,những căn ...
+url = https://www.youtube.com/watch?v=KAnEyj4H3PY
 
 [trangtrisanvuon.vn]
 match = -147.4%%
