--- a/images/nem-caosu-thien-nhien-150x200x10-felix/config.ini
+++ b/images/nem-caosu-thien-nhien-150x200x10-felix/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-caosu-thien-nhien-150x200x10-felix.html
 lastopen = 2024-06-07 00:14:57
 
 [search]
-lastsearch = 2024-07-24 03:49:44
+lastsearch = 2024-07-24 05:20:16
 
 [thefelix.vn]
-match = -2.6%%
-title = Nệm cao su Felix Comfort - Độ cứng tiêu chuẩn (Cấp độ 1)
-url = https://thefelix.vn/products/nem-cao-su-felix-premium-comfort-10cm
+match = -50.0%%
+title = Nệm Cao Su Felix
+url = https://thefelix.vn/collections/nem-cao-su-felix
 
 [nemkhanganh.com]
 match = 47.4%%
@@ -17,9 +17,9 @@ title = Nệm cao su thiên nhiên Felix - Nệm Khang Anh
 url = https://nemkhanganh.com/san-pham/nem-cao-su-thien-nhien-felix/
 
 [www.facebook.com]
-match = 28.9%%
-title = ▫️THỬ THÁCH NỆM CAO SU THIÊN NHIÊN FELIX VÀ ...
-url = https://www.facebook.com/thefelix.vn/videos/️thử-thách-nệm-cao-su-thiên-nhiên-felix-và-trái-trứng-thì-sẽ-như-thế-nào-_______/1380960015843522/
+match = 31.6%%
+title = Felix - Nệm cao su thiên nhiên | Ho Chi Minh City
+url = https://www.facebook.com/thefelix.vn/
 
 [bsa.org.vn]
 match = 57.1%%
