--- a/images/tham-giuong-bo-de-15/config.ini
+++ b/images/tham-giuong-bo-de-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-15.html
 lastopen = 2024-06-07 00:36:08
 
 [search]
-lastsearch = 2024-07-24 02:27:47
+lastsearch = 2024-07-24 05:12:52
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/list/giường xếp
 [sofatoanquoc.com]
 match = 30.0%%
 title = Giường ngủ bọc da mã 15
-url = https://sofatoanquoc.com/giuong-ngu-boc-da-ma-15.html
+url = https://sofatoanquoc.com/giuong-ngu-boc-da-ma-15.html?srsltid=AfmBOorjOUYo4MFOz_iA0QhmGvWPPi3xr2jU3ooTmIQtrPJgMzO9QU3G
 
 [noithathoaphat360.com]
 match = -55.0%%
@@ -59,7 +59,7 @@ url = https://tiki.vn/search?q=thảm trải giường
 [abes.com.vn]
 match = -110.0%%
 title = Bàn giao 15 Giường thẩm mỹ 3 khúc cao cấp Hi-MEC và ...
-url = https://abes.com.vn/blogs/khach-hang-tieu-bieu/ban-giao-15-giuong-tham-my-3-khuc-cao-cap-hi-mec-va-tron-bo-noi-that-t
+url = https://abes.com.vn/blogs/khach-hang-tieu-bieu/ban-giao-15-giuong-tham-my-3-khuc-cao-cap-hi-mec-va-tron-bo-noi-that-t?srsltid=AfmBOopiOzde2oOF0ZMc4dPvqbsV52fpDYJhu75g59nvuHzYaTtX1VC4
 
 [giuongngugiare.vn]
 match = -80.0%%
@@ -87,9 +87,9 @@ title = Giường xếp gọn, ghế xếp là hai sản phẩm tiện ích củ
 url = https://sumika.vn/ghe-xep-giuong-xep-839
 
 [noithatanhuy.com.vn]
-match = -5.0%%
-title = Bộ giường tủ giá rẻ mẫu 15 - Nâu
-url = https://noithatanhuy.com.vn/bo-giuong-tu-gia-re-mau-15-nau
+match = -20.0%%
+title = Bộ giường tủ giá rẻ mẫu 15 - Vân gỗ
+url = https://noithatanhuy.com.vn/bo-giuong-tu-gia-re-mau-15-van-go
 
 [flexhouse.vn]
 match = -55.0%%
@@ -99,7 +99,7 @@ url = https://flexhouse.vn/tham-trai-san-phong-ngu
 [everonvn.com.vn]
 match = -130.0%%
 title = Kích Thước Đệm Everon Tiêu Chuẩn Và Chăn Ga Gối Giường ...
-url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
+url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-?srsltid=AfmBOoojKQQu93qOakWDuBVL3n5aEUNZpWzhveqVetYRDUBAApjlrs4u
 
 [noithatgiakhanh.net]
 match = -105.0%%
