--- a/images/tui-singapore-150x190x09/config.ini
+++ b/images/tui-singapore-150x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-singapore-150x190x09.html
 lastopen = 2024-06-17 10:41:24
 
 [search]
-lastsearch = 2024-07-23 23:38:55
+lastsearch = 2024-07-24 05:14:34
 
 [www.diepxuan.com]
 match = 5.3%%
@@ -12,9 +12,9 @@ title = Túi nệm - Điệp Xuân
 url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [www.tui.co.uk]
-match = -10.5%%
-title = Find & Book Flights
-url = https://www.tui.co.uk/flight/
+match = -58.3%%
+title = Where We Fly | Flights with TUI 2024 / ...
+url = https://www.tui.co.uk/flight/where-we-fly
 
 [www.seatrade-cruise.com]
 match = -100.0%%
@@ -47,8 +47,8 @@ title = | Trip Report | On the Dreamliner! |TUI Airways Boeing 787-9 ...
 url = https://www.youtube.com/watch?v=g2-tbxb9iiQ
 
 [www.instagram.com]
-match = -91.7%%
-title = Singapore Airlines SQ899 HKG-SIN Airbus A350-900 (9V- ...
+match = -29.2%%
+title = Photo shared by Frederick Lee on ...
 url = https://www.instagram.com/black_fdz/p/C0_e_CEvb16/
 
 [theluxurytravelexpert.com]
@@ -60,4 +60,9 @@ url = https://theluxurytravelexpert.com/2021/07/14/review-tui-e190/
 match = 0.0%%
 title = 
 url = https://www.cruisecritic.co.uk/cruise/marella/marella-voyager
+
+[forums4airports.com]
+match = -63.6%%
+title = TUI Airways
+url = https://forums4airports.com/threads/360/page-59
 
