CI images update

--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-24 04:19:12
+lastsearch = 2024-07-24 05:49:33
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -62,14 +62,14 @@ title = Rạp Lotte Kosmo Tây Hồ - Lịch chiếu, Giá vé, Ưu đãi
 url = https://moveek.com/rap/lotte-kosmo-tay-ho/
 
 [baolongan.vn]
-match = -125.0%%
-title = Một ngày ở làng dệt chiếu lác Long Cang, Cần Đước
-url = https://baolongan.vn/mot-ngay-o-lang-det-chieu-lac-long-cang-can-duoc-a5230.html
+match = -31.2%%
+title = Giữ nghề dệt chiếu Long Cang
+url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
 
 [www.youtube.com]
-match = -218.8%%
-title = Xúc động giây phút làm việc cuối cùng trên giường bệnh của ...
-url = https://www.youtube.com/watch?v=fPVND7mwys4
+match = -225.0%%
+title = Quãng thời gian chăm sóc Tổng bí thư Nguyễn Phú Trọng qua ...
+url = https://www.youtube.com/watch?v=D4-5Fcd9AVQ
 
 [books.google.com]
 match = -231.2%%
@@ -202,9 +202,9 @@ title = TP. HCM: Các phái đoàn viếng tang Hòa thượng Thích ...
 url = https://phatsuonline.vn/tp-hcm-cac-phai-doan-vieng-tang-hoa-thuong-thich-hue-tri-sang-ngay-21-7-25
 
 [www.facebook.com]
-match = -87.5%%
-title = Dạy nhảy tại Đà Nẵng _ VL Dance Studio
-url = https://www.facebook.com/p/Dạy-nhảy-tại-Đà-Nẵng-_-VL-Dance-Studio-100069561101332/
+match = -231.2%%
+title = Tổng Bí thư Nguyễn Phú Trọng đã trút hơi thở cuối cùng tại ...
+url = https://www.facebook.com/vtc1tintuc/videos/tổng-bí-thư-nguyễn-phú-trọng-đã-trút-hơi-thở-cuối-cùng-tại-bệnh-viện-trung-ương-/782090644138956/
 
 [www.yenbai.gov.vn]
 match = -193.8%%
@@ -317,9 +317,9 @@ title = Bảo Lộc: Xe cấp cứu tới điểm thi đón 2 thí sinh bị tai
 url = https://baolamdong.vn/xa-hoi/202406/bao-loc-xe-cap-cuu-toi-diem-thi-don-2-thi-sinh-bi-tai-nan-den-benh-vien-dieu-tri-ed827a4/
 
 [baochinhphu.vn]
-match = -212.5%%
-title = Tri ân người có công, ra mắt ngân hàng Gen liệt sĩ chưa ...
-url = https://baochinhphu.vn/tri-an-nguoi-co-cong-ra-mat-ngan-hang-gen-liet-si-chua-xac-dinh-thong-tin-102240723112757431.htm
+match = -150.0%%
+title = UBTVQH thông qua việc sắp xếp các đơn vị hành ...
+url = https://baochinhphu.vn/ubtvqh-thong-qua-viec-sap-xep-cac-don-vi-hanh-chinh-cap-huyen-cap-xa-cua-3-tinh-102240723153849837.htm
 
 [eva.vn]
 match = -212.5%%
@@ -357,9 +357,9 @@ title = C1 Sport - phường Hóa An vô địch Giải bóng đá các xã ...
 url = https://baodongnai.com.vn/the-thao/202406/c1-sport-phuong-hoa-an-vo-dich-giai-bong-da-cac-xa-phuong-thi-tran-tinh-dong-nai-2024-eef4b09/
 
 [m.facebook.com]
-match = -93.8%%
-title = XE 4,7,16 ĐÀ NẴNG HỘI AN SIÊU GIÁ RẺ
-url = https://m.facebook.com/groups/117462682137045/posts/1544412386108727/
+match = -106.2%%
+title = HR - TUYỂN DỤNG | 𝓣𝓻𝓪̀ 𝓢𝓾̛̃𝓪 𝑵𝑶̣𝑵𝑮 𝓒𝓪̂̀𝓷 𝓑𝓸̂̉ ...
+url = https://m.facebook.com/groups/hrtuyendungcnns/posts/8343526272338013/
 
 [thanhnien.vn]
 match = -187.5%%
