--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-07-24 04:28:21
+lastsearch = 2024-07-24 05:43:58
 
 [shopee.vn]
-match = -162.5%%
-title = Chăn Lông Cừu Đại Hàn , Chăn cừu mai rùa siêu ấm kích ...
-url = https://shopee.vn/Chăn-Lông-Cừu-Đại-Hàn-Chăn-cừu-mai-rùa-siêu-ấm-kích-thước-2mx2m3-nặng~-3-8kg-Hàng-Loại-1-Cao-Cấp-Dày-3-Lớp-Siêu-Ấm-i.134729951.23858267538
+match = -137.5%%
+title = Chăn cừu mai rùa siêu ấm kích thước 2mx2m3 nặng 2kg
+url = https://shopee.vn/Chăn-cừu-mai-rùa-siêu-ấm-kích-thước-2mx2m3-nặng-2kg-i.18553977.19585650220
 
 [www.instagram.com]
 match = 12.5%%
@@ -17,9 +17,9 @@ title = Hoi Chan (@hoichandraws)
 url = https://www.instagram.com/hoichandraws/?hl=en
 
 [vi.wikipedia.org]
-match = 28.6%%
-title = Con rùa vũ trụ
-url = https://vi.wikipedia.org/wiki/Con_rùa_vũ_trụ
+match = -75.0%%
+title = Rùa Hoàn Kiếm – Wikipedia tiếng Việt
+url = https://vi.wikipedia.org/wiki/Rùa_Hoàn_Kiếm
 
 [tuongdamynghe.com]
 match = 6.2%%
@@ -52,8 +52,8 @@ title = HSU YING-HUI TO
 url = https://www.cia.gov/readingroom/docs/CIA-RDP84-00581R000100220008-5.pdf
 
 [avibase.bsc-eoc.org]
-match = -275.0%%
-title = Phu Rua National Park bird checklist - Avibase - Bird Checklists of ...
+match = -131.2%%
+title = Phu Rua National Park bird checklist - Avibase
 url = https://avibase.bsc-eoc.org/checklist.jsp?region=TH04le03
 
 [partner.goodsmile.info]
@@ -149,7 +149,7 @@ url = https://drallen.com.vn/khong-phan-loai/hoi-chung-co-rua-la-gi/
 [m.facebook.com]
 match = 66.7%%
 title = Chấn Hội Mai
-url = https://m.facebook.com/61557079050657
+url = https://m.facebook.com/61561372675364
 
 [vnba.org.vn]
 match = -175.0%%
