--- a/images/chieu-lac-d2-09/config.ini
+++ b/images/chieu-lac-d2-09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-09.html
 lastopen = 2024-06-21 06:29:43
 
 [search]
-lastsearch = 2024-07-24 04:46:09
+lastsearch = 2024-07-24 05:50:41
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -77,9 +77,9 @@ title = Học cờ vua nâng cao
 url = https://www.cothongminh.com/tai-lieu-hoc-co-vua/26-hoc-co-vua-nang-cao?start=3
 
 [www.facebook.com]
-match = -30.0%%
-title = 29 tháng 2
-url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=vi_VN
+match = -226.7%%
+title = Giao Lưu Livestream Chiều 18.07 | PURA BILLIARDS - Giao ...
+url = https://www.facebook.com/purabilliards/videos/giao-lưu-livestream-chiều-1807/1207721590543543/
 
 [duhocdoubleh.edu.vn]
 match = -193.3%%
