--- a/images/ruot-goi-ke-korea/config.ini
+++ b/images/ruot-goi-ke-korea/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea.html
 lastopen = 2024-06-10 00:58:26
 
 [search]
-lastsearch = 2024-07-24 04:49:50
+lastsearch = 2024-07-24 05:47:45
 
 [www.diepxuan.com]
 match = -64.7%%
@@ -22,14 +22,14 @@ title = Ruột gối Microfiber Korea Virgin
 url = https://www.detmaykimthanh.com/shops/goi/goi-khach-san-131.html
 
 [shopee.vn]
-match = -105.9%%
-title = Combo 2 chiếc gối bông cotton korea 65cm x 45cm
-url = https://shopee.vn/Combo-2-chiếc-gối-bông-cotton-korea-65cm-x-45cm-01-cặp-ruột-gối-bông-cao-cấp-i.135534164.7132132800
+match = 64.7%%
+title = Ruột gối ép hơi Korea
+url = https://shopee.vn/Ruột-gối-ép-hơi-Korea-i.86050283.1557277406
 
 [demxanh.com]
-match = -205.9%%
-title = Back to School 2023| Trợ giá cực cool cho học sinh, sinh viên
-url = https://demxanh.com/back-to-school-2023-tro-gia-cuc-cool.html
+match = -135.3%%
+title = Ruột gối Kim Cương chính hãng giá tốt nhất thị trường
+url = https://demxanh.com/ruot-goi-kim-cuong.html
 
 [everonkorea.com]
 match = -100.0%%
@@ -87,9 +87,9 @@ title = Mua Ruột gối ép hơi Korea kích thước 40x60cm
 url = https://tiki.vn/ruot-goi-ep-hoi-korea-kich-thuoc-40x60cm-p46348341.html?spid=117894377
 
 [www.sieuthinem.vn]
-match = -35.3%%
-title = RUỘT GỐI TRUYỀN THỐNG EVERON STANDARD
-url = https://www.sieuthinem.vn/ruot-goi-truyen-thong-everon-standard.html
+match = -182.4%%
+title = Gối cao su, gối bông, gối tơ tằm giá tốt tại sieuthinem.vn
+url = https://www.sieuthinem.vn/goi.html
 
 [www.sendo.vn]
 match = -123.5%%
