CI images update

--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-07-24 05:14:46
+lastsearch = 2024-07-24 06:13:50
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -77,14 +77,14 @@ title = Các mẫu chăn ga gối đệm đẹp và đáng mua nhất hiện nay
 url = https://ru9.vn/blogs/magazine/cac-mau-chan-ga-goi-dem
 
 [shopee.vn]
-match = -75.0%%
-title = {1}Bộ ga thun 4 món 16 màu drap giường thun lạnh Hàn ...
-url = https://shopee.vn/-1-Bộ-ga-thun-4-món-16-màu-drap-giường-thun-lạnh-Hàn-Quốc-i.11438690.167422602
+match = -45.8%%
+title = Mua sắm online sản phẩm Chăn, Ga, Gối & Nệm giá tốt
+url = https://shopee.vn/Chăn-Ga-Gối-Nệm-cat.11036670.11036683
 
 [demxanh.com]
-match = 20.8%%
-title = Chăn ga gối cotton Notag 4 món 16
-url = https://demxanh.com/chan-ga-goi-cotton-notag-4-mon-16.html
+match = -54.2%%
+title = [HOT 2024] Top 30 mẫu ảnh chăn ga gối đệm màu tối đẹp ...
+url = https://demxanh.com/chan-ga-goi-dem-mau-toi.html
 
 [changagoibenlinda.com]
 match = -12.5%%
