--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-24 05:46:40
+lastsearch = 2024-07-24 06:16:30
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -12,9 +12,9 @@ title = Ruột Korea - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/nem-bong/ruot-korea.html
 
 [www.instagram.com]
-match = 0.0%%
-title = 
-url = https://www.instagram.com/lol_nemesis/
+match = -35.0%%
+title = Fabiana Justus (@fabianajustus)
+url = https://www.instagram.com/fabianajustus/?hl=en
 
 [www.reddit.com]
 match = -115.0%%
@@ -22,9 +22,9 @@ title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
-match = -60.0%%
-title = United States biological weapons program
-url = https://en.wikipedia.org/wiki/United_States_biological_weapons_program
+match = -33.3%%
+title = Nam Joo-hyuk
+url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
 
 [www.facebook.com]
 match = -160.0%%
@@ -62,9 +62,9 @@ title = Oriental Kitchen Fermented Pork Bites 300g Vietnamese ...
 url = https://www.zing-asia.co.uk/Freshly-Frozen-Oriental-Food-from-Zing-Asia-Chester-UK/15397-oriental-kitchen-fermented-pork-bites-300g-vietnamese-nem-chua-tu-phap-fermented-pork-bites-3447574603102.html
 
 [br.ign.com]
-match = -145.0%%
-title = YouTuber critica Riot Games por preço de skin de Faker no ...
-url = https://br.ign.com/league-of-legends/125071/news/se-eu-nao-fosse-criador-de-conteudo-e-nao-fosse-rico-nao-compraria-nem-com-seu-dinheiro-youtuber-cri
+match = -21.4%%
+title = Mais destaques
+url = http://br.ign.com/?desktop
 
 [koncertbooking.com]
 match = -150.0%%
@@ -109,7 +109,7 @@ url = https://cryptonews.com/news/bitcoin-miner-terawulf-clears-debt-plans-opera
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=17d6a8cd139b7cdd&q=Did+Nam+Joo+Hyuk+go+to+college?&sa=X&ved=2ahUKEwjX5cmBn7iHAxXCGFkFHe1bDDgQsZYEegQISRAC
+url = https://www.google.com/search?sca_esv=584cd96bcb8b380e&sca_upv=1&q=What+is+a+Korean+phone+number?&sa=X&ved=2ahUKEwiypsLQpb6HAxW3EVkFHfutCgwQsZYEegQIGxAC
 
 [files.eric.ed.gov]
 match = -115.0%%
@@ -252,9 +252,9 @@ title = South Korea May Postpone Crypto Taxation Until 2022
 url = https://decrypt.co/49480/south-korea-may-postpone-crypto-taxation-until-2022
 
 [hu.wikipedia.org]
-match = -80.0%%
-title = Ellegarden
-url = https://hu.wikipedia.org/wiki/Ellegarden
+match = -40.0%%
+title = 70. Berlini Nemzetközi Filmfesztivál
+url = https://hu.wikipedia.org/wiki/70._Berlini_Nemzetközi_Filmfesztivál
 
 [www.aoml.noaa.gov]
 match = 0.0%%
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -160.0%%
-title = (Olympics) Confusion reigns after chaotic finish in short ...
-url = https://en.yna.co.kr/view/AEN20180213013100315
+match = -155.0%%
+title = (2nd LD) PM: THAAD deployment 'difficult yet inevitable ...
+url = https://en.yna.co.kr/view/AEN20170907001852315
 
 [www.vlr.gg]
 match = 5.6%%
