--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-24 03:33:19
+lastsearch = 2024-07-24 06:22:17
 
 [www.instagram.com]
-match = -161.5%%
-title = (@katrinacyt) • Instagram photos and videos
-url = https://www.instagram.com/katrinacyt/
+match = -123.1%%
+title = Chan Dior Sunshade (@chan_dior_sunshade)
+url = https://www.instagram.com/chan_dior_sunshade/
 
 [hk.linkedin.com]
 match = -276.9%%
@@ -315,4 +315,9 @@ url = https://www.straitstimes.com/asia/east-asia/prosecution-probes-south-korea
 match = -284.6%%
 title = Dior unveiled the Lady Dior Celebration exhibition in Seoul
 url = https://www.lofficielmalaysia.com/fashion/dior-unveiled-the-lady-dior-celebration-in-seoul-jisoo-jimin-seongsu-eunwoo
+
+[www.npr.org]
+match = 0.0%%
+title = 
+url = https://www.npr.org/2024/01/30/1227831327/luxury-dior-handbag-south-korea-politics
 
