--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-07-24 04:51:51
+lastsearch = 2024-07-24 06:16:19
 
 [burningman.org]
 match = 0.0%%
@@ -27,9 +27,9 @@ title = Congressman Mark Desaulnier | Representing the 10th ...
 url = http://desaulnier.house.gov/
 
 [account.microsoft.com]
-match = -226.7%%
-title = Microsoft account | Sign In or Create Your Account Today ...
-url = https://account.microsoft.com/account/Account
+match = -200.0%%
+title = Microsoft account | Sign In or Create Your Account Today
+url = https://account.microsoft.com/account/manage-my-account
 
 [www.regmovies.com]
 match = -113.3%%
