CI images update

--- a/images/chan-3-kg/config.ini
+++ b/images/chan-3-kg/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-kg.html
 lastopen = 2024-06-09 21:50:05
 
 [search]
-lastsearch = 2024-07-24 03:33:51
+lastsearch = 2024-07-24 06:30:07
 
 [silverwow.net]
 match = -255.6%%
@@ -317,9 +317,9 @@ title = Sterling Silver Curb Chan, 1mm Thick 925 Solid ... - Etsy
 url = https://www.etsy.com/listing/969422604/sterling-silver-curb-chan-1mm-thick-925
 
 [www.schwalbetires.com]
-match = -311.1%%
-title = Tacky Chan | Super Gravity | Black | 29x2.40
-url = https://www.schwalbetires.com/Tacky-Chan-11654533
+match = -500.0%%
+title = Tacky Chan | Super Trail | Black | 29x2.40 | Addix Ultra Soft
+url = https://www.schwalbetires.com/Tacky-Chan-11654531
 
 [theloamwolf.com]
 match = 0.0%%
